--- a/data/cards/10802915.yaml
+++ b/data/cards/10802915.yaml
@@ -249,6 +249,15 @@ sets:
     - Normal Parallel Rare
     - Secret Rare
     - Prismatic Secret Rare
+  - set_number: RC04-JP006
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: EXP5-KR005
     set_name: Extra Pack 2012
