--- a/data/cards/15693423.yaml
+++ b/data/cards/15693423.yaml
@@ -159,6 +159,15 @@ sets:
     set_name: 'Structure Deck: Masters of the Spiritual Arts'
     rarities:
     - Common
+  - set_number: RC04-JP075
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: CIBR-KR077
     set_name: Circuit Break
