--- a/data/cards/34267821.yaml
+++ b/data/cards/34267821.yaml
@@ -187,6 +187,15 @@ sets:
     set_name: 'Structure Deck R: Lost Sanctuary'
     rarities:
     - Normal Parallel Rare
+  - set_number: RC04-JP007
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DUEA-KR034
     set_name: Duelist Alliance
