--- a/data/cards/58699500.yaml
+++ b/data/cards/58699500.yaml
@@ -106,6 +106,15 @@ sets:
     set_name: LINK VRAINS Pack
     rarities:
     - Super Rare
+  - set_number: RC04-JP043
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: LVP1-KR081
     set_name: LINK VRAINS Pack
