--- a/data/cards/89558743.yaml
+++ b/data/cards/89558743.yaml
@@ -89,6 +89,15 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Normal Rare
+  - set_number: RC04-JP068
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: BODE-KR069
     set_name: Burst of Destiny
