--- a/data/cards/91800273.yaml
+++ b/data/cards/91800273.yaml
@@ -118,6 +118,15 @@ sets:
     set_name: 'Structure Deck: Legend of the Crystals'
     rarities:
     - Common
+  - set_number: RC04-JP015
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: EP19-KR066
     set_name: Extra Pack 2019
