--- a/data/cards/21011044.yaml
+++ b/data/cards/21011044.yaml
@@ -91,6 +91,15 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  - set_number: RC04-JP078
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR076
     set_name: Rise of the Duelist
