--- a/data/cards/73304257.yaml
+++ b/data/cards/73304257.yaml
@@ -106,6 +106,15 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: RC04-JP023
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PHRA-KR023
     set_name: Phantom Rage
