--- a/data/cards/83326048.yaml
+++ b/data/cards/83326048.yaml
@@ -185,6 +185,15 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: RC04-JP073
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: INOV-KR078
     set_name: 'Invasion: Vengeance'
