--- a/data/rush/18660.yaml
+++ b/data/rush/18660.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 18660
 name:
   en: Transamu Raiker
   de:
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札１枚を墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの表側表示モンスター（光属性／ギャラクシー族）１体を選ぶ。このターン、そのモンスターの攻撃は貫通する。自分フィールドに表側表示の「トランザム・ライナック」がいる場合、さらに相手フィールドの表側表示モンスター１体を選んで表示形式を変更できる。
   ko:
   zh-TW:
   zh-CN:
