--- a/rush.yaml
+++ b/rush.yaml
@@ -89911,6 +89911,65 @@ sets:
     - Common
 yugipedia_page_id: 923519
 ---
+konami_id: 18660
+name:
+  en: Transamu Raiker
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: トランザム・ライカー
+  ja_romaji: Toranzamu Raikā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    手札１枚を墓地へ送って発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Choose 1 face-up LIGHT Attribute Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if you have "Transamu Rainac" face-up on your field, you can change the battle position of 1 face-up monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分フィールドの表側表示モンスター（光属性／ギャラクシー族）１体を選ぶ。このターン、そのモンスターの攻撃は貫通する。自分フィールドに表側表示の「トランザム・ライナック」がいる場合、さらに相手フィールドの表側表示モンスター１体を選んで表示形式を変更できる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 4
+atk: 1000
+def: 1000
+series:
+- Transamu
+images:
+- index: 1
+  image: TransamuRaiker-RDSJMP-JP-NPR.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP024
+    set_name: Saikyō Jump March 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 928559
+---
 konami_id:
 name:
   en: Five-Headed Dragon
@@ -89995,63 +90054,6 @@ sets:
     rarities:
     - Ultra Rare
 yugipedia_page_id: 921329
----
-konami_id:
-name:
-  en: Transamu Raiker
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: トランザム・ライカー
-  ja_romaji: Toranzamu Raikā
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    Send 1 card from your hand to the Graveyard.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Choose 1 face-up LIGHT Attribute Galaxy Type monster on your field. If it attacks a Defense Position monster this turn, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). Also, if you have "Transamu Rainac" face-up on your field, you can change the battle position of 1 face-up monster on your opponent's field.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Galaxy / Effect
-attribute: LIGHT
-level: 4
-atk: 1000
-def: 1000
-series:
-- Transamu
-images:
-- index: 1
-  image: TransamuRaiker-RDSJMP-JP-NPR.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP024
-    set_name: Saikyō Jump March 2023 promotional card
-    rarities:
-    - Normal Parallel Rare
-yugipedia_page_id: 928559
 ---
 konami_id:
 name:
