--- a/data/cards/96127902.yaml
+++ b/data/cards/96127902.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 96127902
 name:
   en: Made to Order Mermaid Outfit Outfitter
   de: Meerjungfrauen-Kostüm-Maßschneider
