--- a/rush.yaml
+++ b/rush.yaml
@@ -91276,3 +91276,58 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 934285
+---
+konami_id:
+name:
+  en: Slot Machine PG-7
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スロットマシーン <ruby>Ｐ<rt>ピー</rt></ruby><ruby>Ｇ<rt>ジー</rt></ruby>－７
+  ja_romaji: Surotto Mashīn Pī Gī Sebun
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 monster that has a coin tossing effect from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Machine / Effect
+attribute: DARK
+level: 3
+atk: 700
+def: 1000
+images:
+- index: 1
+  image: SlotMachinePG7-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP038
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
+yugipedia_page_id: 934484
