--- a/rush.yaml
+++ b/rush.yaml
@@ -91286,7 +91286,7 @@ name:
   it:
   pt:
   ja: スロットマシーン <ruby>Ｐ<rt>ピー</rt></ruby><ruby>Ｇ<rt>ジー</rt></ruby>－７
-  ja_romaji: Surotto Mashīn Pī Gī Sebun
+  ja_romaji: Surotto Mashīn Pī Jī Sebun
   ko:
   ko_rr:
   zh-TW:
