--- a/data/cards/20663556.yaml
+++ b/data/cards/20663556.yaml
@@ -6,7 +6,7 @@ name:
   es: Sapo Sustituto
   fr: Crapaud de Permutation
   it: Scambiarana
-  pt: Sapo Substituto
+  pt: Batráquiostituto
   ja: イレカエル
   ja_romaji: Irekaeru
   ko: 교체 깨구리
@@ -25,7 +25,7 @@ text:
   it: |-
     Puoi offrire come Tributo 1 mostro per Evocare tramite Evocazione Speciale 1 mostro "RANA" dal tuo Deck. I mostri "RANA" non possono essere distrutti in Battaglia.
   pt: |-
-    Você pode Tributar 1 monstro para Special Summon 1 monstro "Frog" do seu Deck, exceto "Frog the Jam". Monstros "Frog", exceto "Frog the Jam", não podem ser destruídos em batalha.
+    Você pode oferecer 1 monstro como Tributo para Invocar por Invocação-Especial 1 monstro "Sapo" do seu Deck. Os monstros "Sapo" não podem ser destruídos por batalha.
   ja: |-
     自分フィールド上に存在するモンスター１体を生け贄に捧げる。自分のデッキから「ガエル」と名のついたモンスター１体を選択し、自分フィールド上に特殊召喚する。このカードがフィールド上に存在する限り、「ガエル」と名のついたモンスターは戦闘によっては破壊されない。
   ko: |-
