--- a/data/cards/yugipedia934673.yaml
+++ b/data/cards/yugipedia934673.yaml
@@ -31,9 +31,12 @@ attribute: FIRE
 level: 6
 atk: 2000
 def: 200
+images:
+- index: 1
+  image: XenoMeteoros-DBWS-JP-OP.png
 sets:
   ja:
-  - set_number: DPWS-JP001
+  - set_number: DBWS-JP001
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
 limit_regulation:
