--- a/data/cards/yugipedia934674.yaml
+++ b/data/cards/yugipedia934674.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Dinosaur monster + 1 Normal Monster
-    If this card is Special Summoned: You can target 1 Dinosaur monster in your GY; add it to your hand, then, if this card was Special Summoned from the GY, you can destroy 1 card you control or in your hand and 1 card your opponent controls. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use each effect of "Transcendrake Gigantozowler" once per turn.
+    If this card is Special Summoned: You can target 1 Dinosaur monster in your GY; add it to your hand, then, if this card was Special Summoned from the GY, you can destroy both 1 card you control or in your hand and 1 card your opponent controls. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use each effect of "Transcendrake Gigantozowler" once per turn.
   de:
   es:
   fr:
@@ -34,7 +34,14 @@ atk: 3800
 def: 2000
 series:
 - Transcendrake
-sets: {}
+images:
+- index: 1
+  image: TranscendrakeGigantozowler-DBWS-JP-OP.png
+sets:
+  ja:
+  - set_number: DBWS-JP003
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
