--- a/data/cards/yugipedia934677.yaml
+++ b/data/cards/yugipedia934677.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     1 Tuner + 1+ non-Tuner monsters
-     Cannot be destroyed by battle. Your opponent cannot target your Dinosaur monsters Special Summoned from the GY with card effects, also they cannot be destroyed by your opponent's card effects. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use this effect of "Transcendrake Glacesaurus" once per turn.
+    Cannot be destroyed by battle. Your opponent cannot target your Dinosaur monsters Special Summoned from the GY with card effects, also they cannot be destroyed by your opponent's card effects. If this card is destroyed: You can shuffle 1 Normal Monster from your GY into the Deck, then you can Special Summon this card. You can only use this effect of "Transcendrake Glacesaurus" once per turn.
   de:
   es:
   fr:
@@ -34,9 +34,12 @@ atk: 3600
 def: 2700
 series:
 - Transcendrake
+images:
+- index: 1
+  image: TranscendrakeGlacesaurus-DBWS-JP-OP.png
 sets:
   ja:
-  - set_number: DPWS-JP004
+  - set_number: DBWS-JP004
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
 limit_regulation:
