--- a/data/cards/yugipedia934679.yaml
+++ b/data/cards/yugipedia934679.yaml
@@ -27,9 +27,12 @@ text:
   zh-CN:
 card_type: Spell
 property: Normal
+images:
+- index: 1
+  image: GroundXeno-DBWS-JP-OP.png
 sets:
   ja:
-  - set_number: DPWS-JP006
+  - set_number: DBWS-JP006
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
 limit_regulation:
