--- a/data/cards/06631034.yaml
+++ b/data/cards/06631034.yaml
@@ -142,6 +142,9 @@ sets:
     set_name: Duelist Edition Volume 1
     rarities:
     - Rare
+  - set_number: DBWS-JP008
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
   ko:
   - set_number: STON-KR002
     set_name: Strike of Neos
