--- a/data/cards/18511599.yaml
+++ b/data/cards/18511599.yaml
@@ -84,6 +84,9 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: DBWS-JP015
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
   ko:
   - set_number: ORCS-KR045
     set_name: Order of Chaos
