--- a/data/cards/36042004.yaml
+++ b/data/cards/36042004.yaml
@@ -197,6 +197,9 @@ sets:
     set_name: "Structure Deck R: Tyranno's Rage"
     rarities:
     - Normal Parallel Rare
+  - set_number: DBWS-JP013
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
   ko:
   - set_number: POTD-KR022
     set_name: Power of the Duelist
