--- a/data/cards/44335251.yaml
+++ b/data/cards/44335251.yaml
@@ -97,6 +97,9 @@ sets:
     set_name: Tournament Pack 2022 Vol.1
     rarities:
     - Common
+  - set_number: DBWS-JP012
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
   ko:
   - set_number: SR04-KR002
     set_name: "Structure Deck R: Tyranno's Rage"
