--- a/data/cards/82946847.yaml
+++ b/data/cards/82946847.yaml
@@ -73,6 +73,9 @@ sets:
     set_name: "Structure Deck R: Tyranno's Rage"
     rarities:
     - Ultra Rare
+  - set_number: DBWS-JP014
+    set_name: 'Deck Build Pack: Wild Survivors'
+    rarities:
   ko:
   - set_number: SR04-KR000
     set_name: "Structure Deck R: Tyranno's Rage"
