--- a/data/cards/yugipedia934674.yaml
+++ b/data/cards/yugipedia934674.yaml
@@ -32,6 +32,7 @@ attribute: EARTH
 level: 12
 atk: 3800
 def: 2000
+materials: 1 Dinosaur-Type monster + 1 Normal Monster
 series:
 - Transcendrake
 images:
