--- a/data/rush/18256.yaml
+++ b/data/rush/18256.yaml
@@ -51,8 +51,9 @@ series:
 images:
 - index: 1
   image: ProphecyPhraseoftheColorsoftheWind-RDKP11-JP-UR.png
+  illustration: ' ProphecyPhraseoftheColorsoftheWind-G002-JP-VG-artwork.png'
 - index: 2
-  image: ProphecyPhraseoftheColorsoftheWind-RDBDG2-JP-OP.png
+  image: ProphecyPhraseoftheColorsoftheWind-RDBDG2-JP-UPR.png
   illustration: ProphecyPhraseoftheColorsoftheWind-OW.png
 sets:
   ja:
