--- a/data/cards/23297235.yaml
+++ b/data/cards/23297235.yaml
@@ -33,7 +33,7 @@ text:
   zh-TW: |-
     此卡因战斗破坏对手怪兽并将其送入墓地时，可从牌组特殊召唤1只除「炎獄地獄犬」以外的守备力200或以下的炎属性怪物。
   zh-CN: |-
-    ①：这张卡在战斗中破坏对手怪兽并将其送至墓地时可以发动。从牌组中特殊召唤1只“炎狱地狱犬”以外的守备力200以下的炎属性怪兽。
+    ①：这张卡在战斗中破坏对手怪兽并将其送至墓地时可以发动。从牌组中特殊召唤1只"炎狱地狱犬"以外的守备力200以下的炎属性怪兽。
 card_type: Monster
 monster_type_line: Beast / Effect
 attribute: FIRE
