--- a/data/cards/20618081.yaml
+++ b/data/cards/20618081.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드가 묘지로 보내졌을 경우, 자신 묘지의 "샐러맨그레이트" 마법 / 함정 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 자신 필드에 세트한다. ②: 이 카드가 묘지에 존재할 경우, "샐러맨그레이트 팔코" 이외의 자신 필드의 "샐러맨그레이트" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌리고, 이 카드를 묘지에서 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：这张卡被送至墓地的情况下，可以自己墓地1张“转生炎兽”魔法・陷阱卡为对象发动。该卡放置在自己场上。②：这张卡存在于墓地的情况下，可以“转生炎兽 列鹰”以外的自己场上的1只“转生炎兽”怪兽为对象发动。该怪兽放回持有者手牌中，将这张卡从墓地进行特殊召唤。
+    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：这张卡被送至墓地的情况下，可以自己墓地1张"转生炎兽"魔法・陷阱卡为对象发动。该卡放置在自己场上。②：这张卡存在于墓地的情况下，可以"转生炎兽 列鹰"以外的自己场上的1只"转生炎兽"怪兽为对象发动。该怪兽放回持有者手牌中，将这张卡从墓地进行特殊召唤。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
