--- a/data/cards/25166510.yaml
+++ b/data/cards/25166510.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 묘지에 "샐러맨그레이트" 몬스터가 3장 이상 존재할 경우에 발동할 수 있다. 이 카드를 패에서 수비 표시로 특수 소환한다. ②: 상대 필드의 앞면 표시의 카드의 수까지, 자신 묘지의 화염 속성 링크 몬스터를 대상으로 하고 발동할 수 있다. 그 몬스터를 엑스트라 덱으로 되돌린다. 그 후, 되돌린 카드의 수까지 상대 필드의 앞면 표시의 카드를 골라, 턴 종료시까지 그 효과를 무효로 할 수 있다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只能使用1次。①：自己墓地存在3只以上“转生炎兽”怪兽的情况下可以发动。将这张卡从手牌以守备表示形式进行特殊召唤。②：可以自己墓地的炎属性连接怪兽为对象发动，其数量最多为对手场上的表侧表示的卡数量。该怪兽放回额外牌组。之后，可以挑选至多为放回卡张数的对手场上的表侧表示的卡，直到回合结束时为止使这些卡的效果无效。
+    这个卡名的①②的效果1个回合各只能使用1次。①：自己墓地存在3只以上"转生炎兽"怪兽的情况下可以发动。将这张卡从手牌以守备表示形式进行特殊召唤。②：可以自己墓地的炎属性连接怪兽为对象发动，其数量最多为对手场上的表侧表示的卡数量。该怪兽放回额外牌组。之后，可以挑选至多为放回卡张数的对手场上的表侧表示的卡，直到回合结束时为止使这些卡的效果无效。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
