--- a/data/cards/52277807.yaml
+++ b/data/cards/52277807.yaml
@@ -12,7 +12,7 @@ name:
   ko: 샐러맨그레이트 스피니
   ko_rr: Saelleomaen-geureiteu Seupini
   zh-TW:
-  zh-CN: 转生炎兽 犰狳蜥
+  zh-CN: 转生炎兽 刺尾蜥
 text:
   en: |-
     If you control a "Salamangreat" card: You can discard this card, then target 1 face-up monster on the field; it gains 500 ATK until the end of this turn. If you control a "Salamangreat" monster other than "Salamangreat Spinny" and this card is in your GY: You can Special Summon this card, but banish it when it leaves the field. You can only use each effect of "Salamangreat Spinny" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "샐러맨그레이트" 카드가 존재할 경우, 이 카드를 패에서 버리고, 필드의 앞면 표시 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 공격력은 턴 종료시까지 500 올린다. ②: 자신 필드에 "샐러맨그레이트 스피니" 이외의 "샐러맨그레이트" 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 묘지에서 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只能使用1次。①：自己场上有“转生炎兽”卡存在的情况下，把这张卡从手牌中扔掉，可以场上1只表侧表示怪兽为对象发动。该怪兽的攻击力直到回合结束时为止上升500。②：自己场上存在“转生炎兽 犰狳蜥”以外的“转生炎兽”怪兽的情况下可以发动。将这张卡从墓地进行特殊召唤。用这个效果特殊召唤的这张卡在从场上离开的情况下将被除外。
+    这个卡名的①②的效果1个回合各只能使用1次。①：自己场上有"转生炎兽"卡存在的情况下，把这张卡从手牌中扔掉，可以场上1只表侧表示怪兽为对象发动。该怪兽的攻击力直到回合结束时为止上升500。②：自己场上存在"转生炎兽 刺尾蜥"以外的"转生炎兽"怪兽的情况下可以发动。将这张卡从墓地进行特殊召唤。用这个效果特殊召唤的这张卡在从场上离开的情况下将被除外。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
