--- a/data/cards/53490455.yaml
+++ b/data/cards/53490455.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신의 "샐러맨그레이트" 몬스터가 상대 몬스터의 공격 대상으로 선택되었을 때, 이 카드를 패에서 묘지로 보내고, 그 전투를 실행하는 몬스터 2장을 대상으로 하여 발동할 수 있다. 대상의 상대 몬스터의 공격력만큼만 자신의 LP를 회복한다. 이 턴에, 대상의 자신 몬스터는 전투로는 파괴되지 않는다. ②: 이 카드가 묘지에 존재하고, 자신의 "샐러맨그레이트" 몬스터가 전투로 상대 몬스터를 파괴하여 묘지로 보냈을 때에 발동할 수 있다. 이 카드를 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1个回合只能使用1次。①：自己的“转生炎兽”怪兽被选择作为对手怪兽的攻击对象时，把这张卡从手牌送去墓地，可以那2只进行战斗的怪兽为对象发动。自己的LP恢复与作为对象的对手怪兽攻击力的同等数值。这个回合，作为对象的自己怪兽不会被战斗破坏。②：这张卡存在于墓地，自己的“转生炎兽”怪兽在战斗中破坏对手怪兽并将其送至墓地时可以发动。将这张卡加入手牌。
+    这个卡名的②的效果1个回合只能使用1次。①：自己的"转生炎兽"怪兽被选择作为对手怪兽的攻击对象时，把这张卡从手牌送去墓地，可以那2只进行战斗的怪兽为对象发动。自己的LP恢复与作为对象的对手怪兽攻击力的同等数值。这个回合，作为对象的自己怪兽不会被战斗破坏。②：这张卡存在于墓地，自己的"转生炎兽"怪兽在战斗中破坏对手怪兽并将其送至墓地时可以发动。将这张卡加入手牌。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
