--- a/data/cards/67225377.yaml
+++ b/data/cards/67225377.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 일반 드로우 이외의 방법으로 패에 넣어졌을 경우, 이 카드를 상대에게 보여주고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 패에서 이 카드 이외의 "샐러맨그레이트" 카드 1장을 버리고 발동할 수 있다. 이 카드를 패에서 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1个回合各只能使用1次。①：这张卡在以通常抽牌以外的方法加入手牌的情况下，把这张卡出示给对手即可发动。将这张卡从手牌进行特殊召唤。②：从手牌中把这张卡以外的1张“转生炎兽”卡扔掉后即可发动。将这张卡从手牌进行特殊召唤。
+    这个卡名的①②的效果1个回合各只能使用1次。①：这张卡在以通常抽牌以外的方法加入手牌的情况下，把这张卡出示给对手即可发动。将这张卡从手牌进行特殊召唤。②：从手牌中把这张卡以外的1张"转生炎兽"卡扔掉后即可发动。将这张卡从手牌进行特殊召唤。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
