--- a/data/cards/89662401.yaml
+++ b/data/cards/89662401.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "샐러맨그레이트 포울" 이외의 "샐러맨그레이트" 몬스터가 일반 소환 / 특수 소환되었을 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 패 및 자신 필드의 앞면 표시의 카드 중에서, "샐러맨그레이트" 카드 1장을 묘지로 보내고, 상대 필드에 세트된 마법 / 함정 카드 1장을 대상으로 하여 발동할 수 있다. 이 턴에, 그 세트된 마법 / 함정 카드는 발동할 수 없다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①的效果1个回合只能使用1次。①：“转生炎兽 雄孔雀”以外的“转生炎兽”怪兽在自己场上被召唤・特殊召唤的情况下可以发动。将这张卡从手牌进行特殊召唤。②：从手牌及自己场上的表侧表示的卡中把1张“转生炎兽”卡送至墓地，可以对手场上放置的1张魔法・陷阱卡为对象发动。在这个回合中，该放置的魔法·陷阱卡不能发动。
+    这个卡名的①的效果1个回合只能使用1次。①："转生炎兽 雄孔雀"以外的"转生炎兽"怪兽在自己场上被召唤・特殊召唤的情况下可以发动。将这张卡从手牌进行特殊召唤。②：从手牌及自己场上的表侧表示的卡中把1张"转生炎兽"卡送至墓地，可以对手场上放置的1张魔法・陷阱卡为对象发动。在这个回合中，该放置的魔法・陷阱卡不能发动。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
