--- a/data/cards/94620082.yaml
+++ b/data/cards/94620082.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 자신의 덱 위에서 카드를 3장 넘긴다. 그 중에서 "샐러맨그레이트" 카드 1장을 골라 패에 넣을 수 있다. 남은 카드는 덱으로 되돌린다. ②: 이 카드가 묘지에 존재하고, 필드에 앞면 표시의 마법 / 함정 카드가 존재할 경우, 패에서 "샐러맨그레이트" 카드 1장을 버리고 발동할 수 있다. 이 카드를 특수 소환한다. 그 후, 필드의 앞면 표시의 마법 / 함정 카드 1장을 골라 파괴할 수 있다.
   zh-TW:
   zh-CN: |-
-    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：这张卡召唤成功时可以发动。从自己牌组上面把3张卡翻开。可以从其中挑选1张“转生炎兽”卡加入手牌。剩下的卡放回牌组。②：这张卡存在于墓地，且场上有表侧表示的魔法・陷阱卡存在的情况下，从手牌中扔掉1张“转生炎兽”卡后可以发动。特殊召唤这张卡。之后，可以挑选场上1张表侧表示的魔法・陷阱卡进行破坏。
+    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：这张卡召唤成功时可以发动。从自己牌组上面把3张卡翻开。可以从其中挑选1张"转生炎兽"卡加入手牌。剩下的卡放回牌组。②：这张卡存在于墓地，且场上有表侧表示的魔法・陷阱卡存在的情况下，从手牌中扔掉1张"转生炎兽"卡后可以发动。特殊召唤这张卡。之后，可以挑选场上1张表侧表示的魔法・陷阱卡进行破坏。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
