--- a/data/cards/20788863.yaml
+++ b/data/cards/20788863.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 패에서 "샐러맨그레이트" 몬스터 1장을 버리고 발동할 수 있다. 덱에서 "샐러맨그레이트" 몬스터 1장을 묘지로 보낸다. 그 후, 자신은 덱에서 1장 드로우한다. ②: 자신과 같은 이름의 몬스터를 소재로서 링크 소환한 "샐러맨그레이트" 링크 몬스터가 자신 필드에 존재할 경우, 패에서 "샐러맨그레이트" 몬스터 1장을 버리고 발동할 수 있다. 자신은 덱에서 2장 드로우한다.
   zh-TW:
   zh-CN: |-
-    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：从手牌中扔掉1只“转生炎兽”怪兽后即可发动。从牌组中将1只“转生炎兽”怪兽送至墓地。之后，自己从牌组抽1张。②：用和自身同名的怪兽为素材进行连接召唤的“转生炎兽”连接怪兽存在于自己场上的情况下，从手牌中扔掉1只“转生炎兽”怪兽后可以发动。自己从牌组抽2张。
+    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：从手牌中扔掉1只"转生炎兽"怪兽后即可发动。从牌组中将1只"转生炎兽"怪兽送至墓地。之后，自己从牌组抽1张。②：用和自身同名的怪兽为素材进行连接召唤的"转生炎兽"连接怪兽存在于自己场上的情况下，从手牌中扔掉1只"转生炎兽"怪兽后可以发动。自己从牌组抽2张。
 card_type: Trap
 property: Continuous
 series:
