--- a/data/cards/52155219.yaml
+++ b/data/cards/52155219.yaml
@@ -55,8 +55,8 @@ text:
   zh-TW:
   zh-CN: |-
     这个卡名的卡1个回合只能发动1张。①：可以从以下效果选择1个进行发动。
-    ●从牌组将1只“转生炎兽”怪兽加入手牌。
-    ●可以用和自身同名的怪兽为素材作连接召唤的自己场上1只“转生炎兽”连接怪兽为对象发动。在这个回合中，这只连接怪兽不受自身以外的怪兽的效果影响。
+    ●从牌组将1只"转生炎兽"怪兽加入手牌。
+    ●可以用和自身同名的怪兽为素材作连接召唤的自己场上1只"转生炎兽"连接怪兽为对象发动。在这个回合中，这只连接怪兽不受自身以外的怪兽的效果影响。
 card_type: Spell
 property: Quick-Play
 series:
@@ -126,6 +126,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 581487
