--- a/data/cards/14934922.yaml
+++ b/data/cards/14934922.yaml
@@ -51,8 +51,8 @@ text:
   zh-TW:
   zh-CN: |-
     这个卡名的卡1个回合只能发动1张。①：可以从以下效果选择1个发动。
-    ●从手牌以及自己场上的表侧表示怪兽中把1只“转生炎兽”怪兽送至墓地，可以场上1张卡为对象发动。破坏这张卡。
-    ●可对用和自身同名的怪兽为素材进行连接召唤的自己场上1只“转生炎兽”连接怪兽为对象发动。挑选张数至多为该怪兽的连接标记数量的对手场上的卡进行破坏。
+    ●从手牌以及自己场上的表侧表示怪兽中把1只"转生炎兽"怪兽送至墓地，可以场上1张卡为对象发动。破坏这张卡。
+    ●可对用和自身同名的怪兽为素材进行连接召唤的自己场上1只"转生炎兽"连接怪兽为对象发动。挑选张数至多为该怪兽的连接标记数量的对手场上的卡进行破坏。
 card_type: Trap
 property: Normal
 series:
