--- a/data/cards/32437102.yaml
+++ b/data/cards/32437102.yaml
@@ -76,7 +76,7 @@ sets:
     - Common
   ko:
   - set_number: LON-KR101
-    set_name: Labyrinth of Nightmare (Japanese)
+    set_name: Labyrinth of Nightmare
     rarities:
     - Common
 limit_regulation:
