--- a/data/cards/41463181.yaml
+++ b/data/cards/41463181.yaml
@@ -41,7 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     炎属性效果怪兽2只以上
-    ①：这张卡在连接召唤成功的情况下，可以对手的魔法与陷阱区域的1张卡为对象发动。该卡放回持有者的牌组。②：这张卡作为被以“转生炎兽 炽热猛狮”为素材的连接召唤的情况下，1个回合1次，可以场上1只表侧表示怪兽和自己墓地的1只怪兽为对象发动。作为对象的场上的怪兽的攻击力直到回合结束时为止，变为和作为对象的墓地的怪兽的攻击力相同。
+    ①：这张卡在连接召唤成功的情况下，可以对手的魔法与陷阱区域的1张卡为对象发动。该卡放回持有者的牌组。②：这张卡作为被以"转生炎兽 炽热猛狮"为素材的连接召唤的情况下，1个回合1次，可以场上1只表侧表示怪兽和自己墓地的1只怪兽为对象发动。作为对象的场上的怪兽的攻击力直到回合结束时为止，变为和作为对象的墓地的怪兽的攻击力相同。
 card_type: Monster
 monster_type_line: Cyberse / Link / Effect
 attribute: FIRE
