--- a/data/cards/49847524.yaml
+++ b/data/cards/49847524.yaml
@@ -41,7 +41,7 @@ text:
   zh-TW:
   zh-CN: |-
     电子界族怪兽2只
-    ①：“火炎框架管理员”在自己场上只能有1只以表侧表示形式存在。②：只要这张卡存在于怪兽区域，自己场上的连接怪兽的攻击力上升800。
+    ①："火炎框架管理员"在自己场上只能有1只以表侧表示形式存在。②：只要这张卡存在于怪兽区域，自己场上的连接怪兽的攻击力上升800。
 card_type: Monster
 monster_type_line: Cyberse / Link / Effect
 attribute: FIRE
