--- a/data/cards/51339637.yaml
+++ b/data/cards/51339637.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신 필드에 "샐러맨그레이트" 링크 몬스터가 존재하고, 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때에 발동할 수 있다. 그 발동을 무효로 하고 파괴한다. ②: 이 카드가 묘지에 존재하는 상태에서, 자신과 같은 이름의 몬스터를 소재로서 "샐러맨그레이트" 링크 몬스터가 자신 필드에 링크 소환되었을 경우에 발동할 수 있다. 이 카드를 자신 필드에 세트한다. 이 효과로 세트한 이 카드는 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
-    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：自己场上存在“转生炎兽”连接怪兽，且怪兽的效果・魔法・陷阱卡发动时可以发动。将该发动无效化并将其破坏。②：这张卡存在于墓地的状态下，用和自身同名的怪兽为素材将“转生炎兽”连接怪兽在自己场上被连接召唤的情况下可以发动。这张卡放置于自己场上。以这个效果放置的这张卡从场上离开的情况下将被除外。
+    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：自己场上存在"转生炎兽"连接怪兽，且怪兽的效果・魔法・陷阱卡发动时可以发动。将该发动无效化并将其破坏。②：这张卡存在于墓地的状态下，用和自身同名的怪兽为素材将"转生炎兽"连接怪兽在自己场上被连接召唤的情况下可以发动。这张卡放置于自己场上。以这个效果放置的这张卡从场上离开的情况下将被除外。
 card_type: Trap
 property: Counter
 series:
