--- a/data/cards/64178424.yaml
+++ b/data/cards/64178424.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신 메인 페이즈에 발동할 수 있다. 자신의 패 / 묘지에서 "샐러맨그레이트" 몬스터 1장을 골라 특수 소환한다. ②: 마법 & 함정 존의 앞면 표시의 이 카드를 묘지로 보내고, 자신과 같은 이름의 몬스터를 소재로서 링크 소환한 자신 필드의 "샐러맨그레이트" 링크 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터의 링크 마커의 수까지, 자신의 패 / 묘지에서 "샐러맨그레이트" 몬스터를 골라 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：在自己主要阶段可以发动。从自己的手牌・墓地挑选1只“转生炎兽”怪兽进行特殊召唤。②：把这张魔法与陷阱区域的表侧表示的卡送至墓地，可以用和自身同名的怪兽为素材进行连接召唤的自己场上1只“转生炎兽”连接怪兽为对象发动。从自己的手牌·墓地挑选至多为该怪兽的连接标记数量的“转生炎兽”怪兽以守备表示形式进行特殊召唤。
+    1个回合1次，这个卡名的①②的效果只能使用其中任意1个。①：在自己主要阶段可以发动。从自己的手牌・墓地挑选1只"转生炎兽"怪兽进行特殊召唤。②：把这张魔法与陷阱区域的表侧表示的卡送至墓地，可以用和自身同名的怪兽为素材进行连接召唤的自己场上1只"转生炎兽"连接怪兽为对象发动。从自己的手牌・墓地挑选至多为该怪兽的连接标记数量的"转生炎兽"怪兽以守备表示形式进行特殊召唤。
 card_type: Spell
 property: Continuous
 series:
