--- a/data/cards/49858495.yaml
+++ b/data/cards/49858495.yaml
@@ -15,10 +15,10 @@ name:
   zh-CN: 力量棒球女郎三姐妹
 text:
   en: |-
-    Three good friends from Power Pro. They dance gracefully on the field with their passion for baseball!
-    Aoi Hayakawa: The series' first female player. She's an underhand pitcher, and her signature move is the "Marineball". She's Mizuki Tachibana's senior.
-    Mizuki Tachibana: She's a tomboyish and spirited pitcher. Her signature move is the "Crescent Moon". She loves pudding from the Power Canteen.
-    Hijiri Rokudo: A catcher with unmatched baseball talent. She's been best friends with Mizuki Tachibana since middle school. She loves the kintsuba from the Power Canteen.''
+    The three Power Pro girls are best friends! And their passion for baseball soars like a home run!
+    Aoi Hayakawa was the first female player in the league. Her signature pitch is a submariner she calls The Marine Ball!
+    Mizuki Tachibana is more of a tomboy than her senpai, best known for her Crescent Moon Pitch and her love for the pudding sold down at Pawado!
+    Hijiri Rokudo is a catcher with a rare gift for baseball! She's been best friends with Mizuki since junior high and her favorite at Pawado is the Kintsuba!''
   de:
   es:
   fr:
