--- a/data/cards/68075840.yaml
+++ b/data/cards/68075840.yaml
@@ -1,7 +1,7 @@
 konami_id: 18659
 password: 68075840
 name:
-  en: Power Pro Knight Girls
+  en: Power Pro Knight Sisters
   de:
   es:
   fr:
@@ -15,12 +15,8 @@ name:
   zh-CN:
 text:
   en: |-
-    The three navigators of the Powerful Pro world.
-    (Left) Po-chan is cheerful, energetic, and responsible, but the fly in the ointment is she's forgetful.
-    (Right) Wer-chan is gentle, serious, and calm, but sometimes loses her temper.
-    (Center) In the middle is Namiki, the girls' big-time senpai, whose trademark features are her bag and her beloved dog, Chikuwa.
-    The girls lead the players to the stadium, where they'll finally face their destiny. And once there, the players take a big step forward.
-    — This is the beginning of everything; the great history of baseball.''
+    The stadium is now open, and our all-star ladies are ready to take you out to the ball game! It's the beginning of a new baseball legend!
+    Presenting: The three navigators of the Power Pro world! That's Paa-chan on the left, bright, energetic, and (usually) dependable. On the right we've got Waa-chan, calm, earnest, and level-headed (usually...). And Namiki is in charge up front with little Chikuwa in her tote bag, helping us cheer everyone on!''
   de:
   es:
   fr:
@@ -43,7 +39,7 @@ atk: 1200
 def: 2400
 images:
 - index: 1
-  image: PowerProKnightGirls-PPC2-JP-C.png
+  image: PowerProKnightSisters-PPC2-JP-C.png
 sets:
   ja:
   - set_number: PPC2-JP002
