--- a/data/cards/yugipedia930451.yaml
+++ b/data/cards/yugipedia930451.yaml
@@ -26,7 +26,7 @@ text:
   zh-TW:
   zh-CN:
 card_type: Monster
-monster_type_line: Spellcaster / Effect
+monster_type_line: Spellcaster / Flip / Effect
 attribute: LIGHT
 level: 5
 atk: 600
