--- a/data/cards/10019086.yaml
+++ b/data/cards/10019086.yaml
@@ -67,26 +67,31 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+    - Starlight Rare
   de:
   - set_number: PHHY-DE048
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+    - Starlight Rare
   fr:
   - set_number: PHHY-FR048
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+    - Starlight Rare
   it:
   - set_number: PHHY-IT048
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+    - Starlight Rare
   pt:
   - set_number: PHHY-PT048
     set_name: Photon Hypernova
     rarities:
     - Super Rare
+    - Starlight Rare
   ja:
   - set_number: PHHY-JP048
     set_name: Photon Hypernova
