--- a/data/cards/35569555.yaml
+++ b/data/cards/35569555.yaml
@@ -49,22 +49,27 @@ sets:
   - set_number: PHHY-EN055
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   de:
   - set_number: PHHY-DE055
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   fr:
   - set_number: PHHY-FR055
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   it:
   - set_number: PHHY-IT055
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   pt:
   - set_number: PHHY-PT055
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   ja:
   - set_number: PHHY-JP055
     set_name: Photon Hypernova
