--- a/data/cards/48626373.yaml
+++ b/data/cards/48626373.yaml
@@ -63,26 +63,31 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+    - Starlight Rare
   de:
   - set_number: PHHY-DE046
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+    - Starlight Rare
   fr:
   - set_number: PHHY-FR046
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+    - Starlight Rare
   it:
   - set_number: PHHY-IT046
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+    - Starlight Rare
   pt:
   - set_number: PHHY-PT046
     set_name: Photon Hypernova
     rarities:
     - Secret Rare
+    - Starlight Rare
   ja:
   - set_number: PHHY-JP046
     set_name: Photon Hypernova
