--- a/data/cards/85969517.yaml
+++ b/data/cards/85969517.yaml
@@ -77,22 +77,27 @@ sets:
   - set_number: PHHY-EN041
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   de:
   - set_number: PHHY-DE041
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   fr:
   - set_number: PHHY-FR041
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   it:
   - set_number: PHHY-IT041
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   pt:
   - set_number: PHHY-PT041
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   ja:
   - set_number: PHHY-JP041
     set_name: Photon Hypernova
