--- a/data/cards/88926295.yaml
+++ b/data/cards/88926295.yaml
@@ -52,22 +52,27 @@ sets:
   - set_number: PHHY-EN032
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   de:
   - set_number: PHHY-DE032
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   fr:
   - set_number: PHHY-FR032
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   it:
   - set_number: PHHY-IT032
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   pt:
   - set_number: PHHY-PT032
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   ja:
   - set_number: PHHY-JP032
     set_name: Photon Hypernova
