--- a/data/cards/08953369.yaml
+++ b/data/cards/08953369.yaml
@@ -47,22 +47,27 @@ sets:
   - set_number: PHHY-EN057
     set_name: Photon Hypernova
     rarities:
+    - Common
   de:
   - set_number: PHHY-DE057
     set_name: Photon Hypernova
     rarities:
+    - Common
   fr:
   - set_number: PHHY-FR057
     set_name: Photon Hypernova
     rarities:
+    - Common
   it:
   - set_number: PHHY-IT057
     set_name: Photon Hypernova
     rarities:
+    - Common
   pt:
   - set_number: PHHY-PT057
     set_name: Photon Hypernova
     rarities:
+    - Common
   ja:
   - set_number: PHHY-JP057
     set_name: Photon Hypernova
