--- a/data/cards/33925864.yaml
+++ b/data/cards/33925864.yaml
@@ -47,22 +47,27 @@ sets:
   - set_number: PHHY-EN075
     set_name: Photon Hypernova
     rarities:
+    - Common
   de:
   - set_number: PHHY-DE075
     set_name: Photon Hypernova
     rarities:
+    - Common
   fr:
   - set_number: PHHY-FR075
     set_name: Photon Hypernova
     rarities:
+    - Common
   it:
   - set_number: PHHY-IT075
     set_name: Photon Hypernova
     rarities:
+    - Common
   pt:
   - set_number: PHHY-PT075
     set_name: Photon Hypernova
     rarities:
+    - Common
   ja:
   - set_number: PHHY-JP075
     set_name: Photon Hypernova
