--- a/data/cards/95283172.yaml
+++ b/data/cards/95283172.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 95283172
 name:
   en: Gold Pride - The Crowd Goes Wild!
   de: Goldstolz - Die Menge spielt verrückt!
