--- a/data/cards/21677871.yaml
+++ b/data/cards/21677871.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 21677871
 name:
   en: Gold Pride - Start Your Engines!
   de: Goldstolz - Startet eure Motoren!
@@ -42,22 +42,27 @@ sets:
   - set_number: PHHY-EN092
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   de:
   - set_number: PHHY-DE092
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   fr:
   - set_number: PHHY-FR092
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   it:
   - set_number: PHHY-IT092
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   pt:
   - set_number: PHHY-PT092
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
