--- a/data/cards/44146295.yaml
+++ b/data/cards/44146295.yaml
@@ -62,26 +62,46 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Ultra Rare
+  - set_number: PHHY-EN100
+    set_name: Photon Hypernova
+    rarities:
+    - Starlight Rare
   de:
   - set_number: SDAZ-DE041
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Ultra Rare
+  - set_number: PHHY-DE100
+    set_name: Photon Hypernova
+    rarities:
+    - Starlight Rare
   fr:
   - set_number: SDAZ-FR041
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Ultra Rare
+  - set_number: PHHY-FR100
+    set_name: Photon Hypernova
+    rarities:
+    - Starlight Rare
   it:
   - set_number: SDAZ-IT041
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Ultra Rare
+  - set_number: PHHY-IT100
+    set_name: Photon Hypernova
+    rarities:
+    - Starlight Rare
   pt:
   - set_number: SDAZ-PT041
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Ultra Rare
+  - set_number: PHHY-PT100
+    set_name: Photon Hypernova
+    rarities:
+    - Starlight Rare
   ja:
   - set_number: SD43-JP041
     set_name: 'Structure Deck: Alba Strike'
