--- a/data/cards/58884063.yaml
+++ b/data/cards/58884063.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 58884063
 name:
   en: Gold Pride - Nytro Blaster
   de: Goldstolz - Nytrosprenger
@@ -54,22 +54,27 @@ sets:
   - set_number: PHHY-EN090
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   de:
   - set_number: PHHY-DE090
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   fr:
   - set_number: PHHY-FR090
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   it:
   - set_number: PHHY-IT090
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   pt:
   - set_number: PHHY-PT090
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
