--- a/data/cards/59900655.yaml
+++ b/data/cards/59900655.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 59900655
 name:
   en: Gold Pride - Nytro Head
   de: Goldstolz - Nytrokopf
@@ -46,22 +46,27 @@ sets:
   - set_number: PHHY-EN087
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   de:
   - set_number: PHHY-DE087
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   fr:
   - set_number: PHHY-FR087
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   it:
   - set_number: PHHY-IT087
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
   pt:
   - set_number: PHHY-PT087
     set_name: Photon Hypernova
     rarities:
+    - Super Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
