--- a/data/cards/96305350.yaml
+++ b/data/cards/96305350.yaml
@@ -1,5 +1,5 @@
 konami_id:
-password:
+password: 96305350
 name:
   en: Gold Pride - Captain Carrie
   de: Goldstolz - Kapitänin Carrie
@@ -47,26 +47,31 @@ sets:
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+    - Starlight Rare
   de:
   - set_number: PHHY-DE088
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+    - Starlight Rare
   fr:
   - set_number: PHHY-FR088
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+    - Starlight Rare
   it:
   - set_number: PHHY-IT088
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+    - Starlight Rare
   pt:
   - set_number: PHHY-PT088
     set_name: Photon Hypernova
     rarities:
     - Ultra Rare
+    - Starlight Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
