--- a/data/cards/29867611.yaml
+++ b/data/cards/29867611.yaml
@@ -61,11 +61,15 @@ series:
 - Attraction
 images:
 - index: 1
-  image: AmazeAttractionMajesticMerryGoRound-LIOV-EN-C-1E.png
+  image: AmazeAttractionMajesticMerryGoRound-OP21-EN-C-UE.png
 sets:
   en:
   - set_number: LIOV-EN073
     set_name: Lightning Overdrive
+    rarities:
+    - Common
+  - set_number: OP21-EN026
+    set_name: OTS Tournament Pack 21
     rarities:
     - Common
   de:
@@ -73,9 +77,17 @@ sets:
     set_name: Lightning Overdrive
     rarities:
     - Common
+  - set_number: OP21-DE026
+    set_name: OTS Tournament Pack 21
+    rarities:
+    - Common
   fr:
   - set_number: LIOV-FR073
     set_name: Lightning Overdrive
+    rarities:
+    - Common
+  - set_number: OP21-FR026
+    set_name: OTS Tournament Pack 21
     rarities:
     - Common
   it:
@@ -83,9 +95,17 @@ sets:
     set_name: Lightning Overdrive
     rarities:
     - Common
+  - set_number: OP21-IT026
+    set_name: OTS Tournament Pack 21
+    rarities:
+    - Common
   pt:
   - set_number: LIOV-PT073
     set_name: Lightning Overdrive
+    rarities:
+    - Common
+  - set_number: OP21-PT026
+    set_name: OTS Tournament Pack 21
     rarities:
     - Common
   ja:
