--- a/data/cards/54098121.yaml
+++ b/data/cards/54098121.yaml
@@ -15,7 +15,8 @@ name:
   zh-CN: 谜之傀儡师
 text:
   en: |-
-    Each time you or your opponent Normal Summons or Flip Summons a monster, increase your Life Points by 500 points.
+    (This card is not treated as a "Puppet" card.)
+    If another monster is Normal or Flip Summoned: Gain 500 LP.
   de: |-
     Solange diese Karte offen auf dem Spielfeld liegt, erhöhen sich die Life Points des kontrollierenden Spielers für jedes beschworene Monster (auch für Monster deines Gegners, aber nicht für Spezialbeschwörung) um 500 Punkte.
   es: |-
@@ -41,14 +42,14 @@ atk: 1000
 def: 1500
 images:
 - index: 1
-  image: MysteriousPuppeteer-SKE-EN-C-1E.jpg
+  image: MysteriousPuppeteer-OP21-EN-C-UE.png
 sets:
   en:
   - set_number: SKE-017
     set_name: 'Starter Deck: Kaiba Evolution'
     rarities:
     - Common
-  - set_number: OP21-EN???
+  - set_number: OP21-EN013
     set_name: OTS Tournament Pack 21
     rarities:
     - Common
@@ -73,7 +74,7 @@ sets:
     set_name: 'Starter Deck: Kaiba Evolution'
     rarities:
     - Common
-  - set_number: OP21-DE???
+  - set_number: OP21-DE013
     set_name: OTS Tournament Pack 21
     rarities:
     - Common
@@ -86,7 +87,7 @@ sets:
     set_name: 'Starter Deck: Kaiba Evolution'
     rarities:
     - Common
-  - set_number: OP21-EN???
+  - set_number: OP21-FR013
     set_name: OTS Tournament Pack 21
     rarities:
     - Common
@@ -99,7 +100,7 @@ sets:
     set_name: 'Starter Deck: Kaiba Evolution'
     rarities:
     - Common
-  - set_number: OP21-IT???
+  - set_number: OP21-IT013
     set_name: OTS Tournament Pack 21
     rarities:
     - Common
@@ -112,7 +113,7 @@ sets:
     set_name: 'Starter Deck: Kaiba Evolution'
     rarities:
     - Common
-  - set_number: OP21-PT???
+  - set_number: OP21-PT013
     set_name: OTS Tournament Pack 21
     rarities:
     - Common
