--- a/data/cards/40975243.yaml
+++ b/data/cards/40975243.yaml
@@ -91,6 +91,15 @@ sets:
     set_name: Phantom Rage
     rarities:
     - Common
+  - set_number: RC04-JP080
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: PHRA-KR070
     set_name: Phantom Rage
