--- a/data/cards/84211599.yaml
+++ b/data/cards/84211599.yaml
@@ -103,6 +103,15 @@ sets:
     rarities:
     - Super Rare
     - Prismatic Secret Rare
+  - set_number: RC04-JP067
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   - set_number: TBC1-JP011
     set_name: Pot Collection
     rarities:
