--- a/data/cards/01984618.yaml
+++ b/data/cards/01984618.yaml
@@ -90,6 +90,15 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Rare
+  - set_number: RC04-JP063
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR052
     set_name: Rise of the Duelist
