--- a/data/cards/62849088.yaml
+++ b/data/cards/62849088.yaml
@@ -136,6 +136,15 @@ sets:
     rarities:
     - Ultra Rare
     - Prismatic Secret Rare
+  - set_number: RC04-JP024
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DAMA-KR009
     set_name: Dawn of Majesty
