--- a/data/cards/68468459.yaml
+++ b/data/cards/68468459.yaml
@@ -144,6 +144,15 @@ sets:
     set_name: 'Structure Deck: Alba Strike'
     rarities:
     - Common
+  - set_number: RC04-JP022
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Super Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR011
     set_name: Rise of the Duelist
