--- a/data/cards/82956214.yaml
+++ b/data/cards/82956214.yaml
@@ -111,6 +111,15 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Common
+  - set_number: RC04-JP077
+    set_name: Rarity Collection Quarter Century Edition
+    rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Collector's Rare
+    - Secret Rare
+    - Extra Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR070
     set_name: Rise of the Duelist
