--- a/data/cards/12801833.yaml
+++ b/data/cards/12801833.yaml
@@ -1,7 +1,7 @@
 konami_id: 18310
 password: 12801833
 name:
-  en: Traptrix Orchard
+  en: Traptrip Garden
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    During your Main Phase, you can Normal Summon 1 "Traptrix" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) The first time each of your Insect and Plant monsters would be destroyed by battle each turn, they are not destroyed. You can banish 1 monster you control; Special Summon 1 "Traptrix" monster from your hand or GY. You can only use this effect of "Traptrix Orchard" once per turn.
+    During your Main Phase, you can Normal Summon 1 "Traptrix" monster in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) The first time each of your Insect and Plant monsters would be destroyed by battle each turn, they are not destroyed. You can banish 1 monster you control; Special Summon 1 "Traptrix" monster from your hand or GY. You can only use this effect of "Traptrip Garden" once per turn.
   de:
   es:
   fr:
@@ -30,7 +30,7 @@ card_type: Spell
 property: Field
 images:
 - index: 1
-  image: TraptrixOrchard-SD45-JP-SR.png
+  image: TraptripGarden-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JP023
