--- a/data/cards/51790181.yaml
+++ b/data/cards/51790181.yaml
@@ -46,6 +46,10 @@ sets:
     set_name: Absolute Powerforce
     rarities:
     - Short Print
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   de:
   - set_number: ABPF-DE061
     set_name: Absolute Powerforce
@@ -67,7 +71,7 @@ sets:
     rarities:
     - Normal Rare
   - set_number: TBC1-JP004
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -75,6 +79,11 @@ sets:
     set_name: Absolute Powerforce
     rarities:
     - Normal Rare
+  zh-CN:
+  - set_number: TBC1-SCS04
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
