--- a/data/cards/55144522.yaml
+++ b/data/cards/55144522.yaml
@@ -96,6 +96,14 @@ sets:
     set_name: Yugi's Legendary Decks
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Quarter Century Secret Rare
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   - set_number: LOB-119
     set_name: Legend of Blue Eyes White Dragon
     rarities:
@@ -388,11 +396,14 @@ sets:
     set_name: Duel Royale Deck Set EX Round 2
     rarities:
     - Common
+  - set_number: TBC1-JPS01
+    set_name: The Pot Collection
+    rarities:
+    - Quarter Century Secret Rare
   - set_number: TBC1-JP001
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
-    - Quarter Century Secret Rare
   ko:
   - set_number: LOB-K119
     set_name: Legend of Blue Eyes White Dragon
@@ -428,7 +439,7 @@ sets:
     - Ultra Rare
   zh-CN:
   - set_number: TBC1-SCS01
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Quarter Century Secret Rare
 limit_regulation:
