--- a/data/cards/74577599.yaml
+++ b/data/cards/74577599.yaml
@@ -1,7 +1,7 @@
 konami_id: 18315
 password: 74577599
 name:
-  en: Traptrix Holetaea
+  en: Traptrix Holeutea
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Special Summon this card in Defense Position as a Normal Monster (Plant/EARTH/Level 4/ATK 400/DEF 2400). (This card is NOT treated as a Trap.) You can banish this card from your GY, then target 1 "Traptrix" monster in your GY; Special Summon it. You can only use 1 "Traptrix Holetaea" effect per turn, and only once that turn. You can activate this card the turn it was Set by discarding 1 Normal Trap.
+    Special Summon this card in Defense Position as a Normal Monster (Plant/EARTH/Level 4/ATK 400/DEF 2400). (This card is NOT treated as a Trap.) You can banish this card from your GY, then target 1 "Traptrix" monster in your GY; Special Summon it. You can only use 1 "Traptrix Holeutea" effect per turn, and only once that turn. You can activate this card the turn it was Set by discarding 1 Normal Trap.
   de:
   es:
   fr:
@@ -33,7 +33,7 @@ series:
 - Traptrix
 images:
 - index: 1
-  image: TraptrixHoletaea-SD45-JP-SR.png
+  image: TraptrixHoleutea-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JPP05
