--- a/data/cards/98645731.yaml
+++ b/data/cards/98645731.yaml
@@ -101,6 +101,10 @@ sets:
     set_name: King's Court
     rarities:
     - Rare
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   de:
   - set_number: DREV-DE062
     set_name: Duelist Revolution
@@ -364,7 +368,7 @@ sets:
     rarities:
     - Common
   - set_number: TBC1-JP007
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -416,6 +420,10 @@ sets:
     set_name: Starter Deck 2021 Special Pack
     rarities:
     - Super Rare
+  - set_number: TBC1-SCS07
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
