--- a/data/cards/04896788.yaml
+++ b/data/cards/04896788.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: Dark Revelation Volume 2
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   - set_number: IOC-009
     set_name: Invasion of Chaos
     rarities:
@@ -95,7 +99,7 @@ sets:
     rarities:
     - Common
   - set_number: TBC1-JP012
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -107,6 +111,11 @@ sets:
     set_name: Expert Edition Volume.2
     rarities:
     - Common
+  zh-CN:
+  - set_number: TBC1-SCS12
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
