--- a/data/cards/22123627.yaml
+++ b/data/cards/22123627.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: OTS Tournament Pack 11
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   de:
   - set_number: SOVR-DE058
     set_name: Stardust Overdrive
@@ -157,7 +161,7 @@ sets:
     rarities:
     - Common
   - set_number: TBC1-JP013
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -178,6 +182,11 @@ sets:
     set_name: 'Structure Deck: Roar of the Sea Emperor'
     rarities:
     - Common
+  zh-CN:
+  - set_number: TBC1-SCS13
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
