--- a/data/cards/33904024.yaml
+++ b/data/cards/33904024.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: Speed Duel Tournament Pack 3
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   de:
   - set_number: PHSW-DE057
     set_name: Photon Shockwave
@@ -192,7 +196,7 @@ sets:
     rarities:
     - Common
   - set_number: TBC1-JP014
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -200,6 +204,11 @@ sets:
     set_name: Photon Shockwave
     rarities:
     - Rare
+  zh-CN:
+  - set_number: TBC1-SCS14
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
