--- a/data/cards/35261759.yaml
+++ b/data/cards/35261759.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: 'Structure Deck: Sacred Beasts'
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   de:
   - set_number: TDIL-DE066
     set_name: The Dark Illusion
@@ -196,7 +200,7 @@ sets:
     rarities:
     - Normal Parallel Rare
   - set_number: TBC1-JP009
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -241,6 +245,10 @@ sets:
     - Ultimate Rare
     - Secret Rare
     - Collector's Rare
+  - set_number: TBC1-SCS09
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Semi-Limited
   ocg: Semi-Limited
