--- a/data/cards/48805472.yaml
+++ b/data/cards/48805472.yaml
@@ -1,7 +1,7 @@
 konami_id: 18311
 password: 48805472
 name:
-  en: Traptrix Allure
+  en: Traptantalizing Tune
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Discard 1 Level 4 Insect or Plant monster, or 1 Normal Trap; draw 2 cards. You can banish this card from your GY, then target 1 of your banished Level 4 Insect or Plant monsters, or 1 of your banished Normal Traps; place it on the bottom of the Deck. You can only use each effect of "Traptrix Allure" once per turn.
+    Discard 1 Level 4 Insect or Plant monster, or 1 Normal Trap; draw 2 cards. You can banish this card from your GY, then target 1 of your banished Level 4 Insect or Plant monsters, or 1 of your banished Normal Traps; place it on the bottom of the Deck. You can only use each effect of "Traptantalizing Tune" once per turn.
   de:
   es:
   fr:
@@ -30,7 +30,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: TraptrixAllure-SD45-JP-SR.png
+  image: TraptantalizingTune-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JP024
