--- a/data/cards/49238328.yaml
+++ b/data/cards/49238328.yaml
@@ -63,6 +63,10 @@ sets:
     set_name: 'Structure Deck: Albaz Strike'
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   de:
   - set_number: SAST-DE067
     set_name: Savage Strike
@@ -169,7 +173,7 @@ sets:
     rarities:
     - Common
   - set_number: TBC1-JP010
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -195,6 +199,10 @@ sets:
     - Super Rare
     - Secret Rare
     - Extra Secret Rare
+  - set_number: TBC1-SCS10
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
