--- a/data/cards/64014615.yaml
+++ b/data/cards/64014615.yaml
@@ -46,6 +46,10 @@ sets:
     set_name: 'Invasion: Vengeance'
     rarities:
     - Super Rare
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   de:
   - set_number: INOV-DE065
     set_name: 'Invasion: Vengeance'
@@ -77,7 +81,7 @@ sets:
     rarities:
     - Common
   - set_number: TBC1-JP006
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -90,6 +94,11 @@ sets:
     set_name: 'Structure Deck: Master Link'
     rarities:
     - Common
+  zh-CN:
+  - set_number: TBC1-SCS06
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
