--- a/data/cards/67169062.yaml
+++ b/data/cards/67169062.yaml
@@ -88,6 +88,10 @@ sets:
     set_name: 'Egyptian God Deck: Obelisk the Tormentor'
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   - set_number: DR04-EN097
     set_name: Dark Revelation Volume 4
     rarities:
@@ -318,7 +322,7 @@ sets:
     rarities:
     - Common
   - set_number: TBC1-JP003
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -405,6 +409,10 @@ sets:
     set_name: "Structure Deck: Egyptian Gods' Advent: Slifer the Sky Dragon & Obelisk the Tormentor"
     rarities:
     - Common
+  - set_number: TBC1-SCS03
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
