--- a/data/cards/70278545.yaml
+++ b/data/cards/70278545.yaml
@@ -46,6 +46,10 @@ sets:
     set_name: Cybernetic Revolution
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   - set_number: DR04-EN043
     set_name: Dark Revelation Volume 4
     rarities:
@@ -80,7 +84,7 @@ sets:
     rarities:
     - Common
   - set_number: TBC1-JP002
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -92,6 +96,11 @@ sets:
     set_name: Expert Edition Volume 4
     rarities:
     - Common
+  zh-CN:
+  - set_number: TBC1-SCS02
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
