--- a/data/cards/75294187.yaml
+++ b/data/cards/75294187.yaml
@@ -1,7 +1,7 @@
 konami_id: 18312
 password: 75294187
 name:
-  en: Delusion Trap Hole
+  en: Terrifying Trap Hole Nightmare
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If your opponent Special Summoned a monster this turn: Target 1 monster they control with 2000 or more ATK; destroy it, then, if you have a "Hole" Normal Trap in your GY, you can banish 1 monster from your opponent's GY. You can only activate 1 "Delusion Trap Hole" per turn.
+    If your opponent Special Summoned a monster this turn: Target 1 monster they control with 2000 or more ATK; destroy it, then, if you have a "Hole" Normal Trap in your GY, you can banish 1 monster from your opponent's GY. You can only activate 1 "Terrifying Trap Hole Nightmare" per turn.
   de:
   es:
   fr:
@@ -32,7 +32,7 @@ series:
 - Trap Hole
 images:
 - index: 1
-  image: DelusionTrapHole-SD45-JP-SR.png
+  image: TerrifyingTrapHoleNightmare-SD45-JP-SR.png
 sets:
   ja:
   - set_number: SD45-JP027
