--- a/data/cards/84211599.yaml
+++ b/data/cards/84211599.yaml
@@ -51,6 +51,10 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Prismatic Secret Rare
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   de:
   - set_number: BLVO-DE065
     set_name: Blazing Vortex
@@ -113,7 +117,7 @@ sets:
     - Extra Secret Rare
     - Quarter Century Secret Rare
   - set_number: TBC1-JP011
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -133,6 +137,10 @@ sets:
     set_name: Mega Pack 05
     rarities:
     - Prismatic Secret Rare
+  - set_number: TBC1-SCS11
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Semi-Limited
