--- a/data/cards/98672567.yaml
+++ b/data/cards/98672567.yaml
@@ -54,6 +54,10 @@ sets:
     set_name: Legendary Decks II
     rarities:
     - Common
+  - set_number: ????-EN???
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
   de:
   - set_number: SHSP-DE065
     set_name: Shadow Specters
@@ -112,7 +116,7 @@ sets:
     rarities:
     - Super Rare
   - set_number: TBC1-JP008
-    set_name: Pot Collection
+    set_name: The Pot Collection
     rarities:
     - Ultra Parallel Rare
   ko:
@@ -120,6 +124,11 @@ sets:
     set_name: Shadow Specters
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: TBC1-SCS08
+    set_name: The Pot Collection
+    rarities:
+    - Ultra Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
