--- a/data/cards/02906250.yaml
+++ b/data/cards/02906250.yaml
@@ -33,7 +33,7 @@ text:
   zh-CN: |-
     奸诈狡猾的蛇，注意其用粗长的身体束缚攻击！
 card_type: Monster
-monster_type_line: Reptile
+monster_type_line: Reptile / Normal
 attribute: WATER
 level: 4
 atk: 1300
