--- a/data/cards/yugipedia934973.yaml
+++ b/data/cards/yugipedia934973.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: ブエリヤベース・ド・ヌーベルズ
-  ja_romaji: Bueriyabēsu do Nūberuzu
+  ja_romaji: Bueriyabēsu Do Nūberuzu
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Buerillabaisse de Nouvellez" once per turn. If this card is Special Summoned: You can excavate the top 5 cards of your Deck, and if you do, you can add 1 excavated "Nouvellez" card to your hand, also shuffle the rest back into the Deck. When a card or effect is activated that targets this card, or when this card is targeted for an attack (Quick Effect): You can Tribute both this card and 1 other Attack Position monster on either field, and if you do, Special Summon 1 Level 2 or 3 "Nouvellez" Ritual Monster from your hand or Deck.
+    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Buerillabaisse de Nouvellez" once per turn. If this card is Special Summoned: You can excavate the top 5 cards of your Deck, and if you do, you can add 1 excavated "Nouvellez" card to your hand, also shuffle the rest into the Deck. When a card or effect is activated that targets this card, or when this card is targeted for an attack (Quick Effect): You can Tribute both this card and 1 other Attack Position monster on either field, and if you do, Special Summon 1 Level 2 or 3 "Nouvellez" Ritual Monster from your hand or Deck.
   de:
   es:
   fr:
