--- a/data/cards/yugipedia934977.yaml
+++ b/data/cards/yugipedia934977.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: バラムニエル・ド・ヌーベルズ
-  ja_romaji: Baramunieru do Nūberuzu
+  ja_romaji: Baramunieru Do Nūberuzu
   ko:
   ko_rr:
   zh-TW:
