--- a/data/cards/yugipedia934981.yaml
+++ b/data/cards/yugipedia934981.yaml
@@ -8,14 +8,15 @@ name:
   it:
   pt:
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｖｉａｎｄｅ<rt>ルセット・ド・ヴィアンド</rt></ruby>～<ruby>肉<rt>にく</rt></ruby><ruby>料<rt>りょう</rt></ruby><ruby>理<rt>り</rt></ruby>のレシプ～
-  ja_romaji: Rusetto do Viando ~ Niku Ryōri no Reshipu ~
+  ja_romaji: Rusetto Do Viando ~ Nikuryōri no Reshipu ~
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    This card can be used to Ritual Summon any "Nouvellez" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon, then, if you Ritual Summoned "Confitras de Nouvellez" with this effect, you can change all opponent's Defense Position monsters to face-up Attack Position.
+    This card can be used to Ritual Summon any "Nouvellez" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Confitras de Nouvellez" with this effect, you can apply the following effect.
+    ● Change all opponent's Defense Position monsters to face-up Attack Position.
   de:
   es:
   fr:
