--- a/data/cards/yugipedia934983.yaml
+++ b/data/cards/yugipedia934983.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｓｐéｃｉａｌｉｔé<rt>ルセット・ド・スペシャリテ</rt></ruby>～<ruby>料理長<rt>シェフ</rt></ruby><ruby>自<rt>じ</rt></ruby><ruby>慢<rt>まん</rt></ruby>のレシプ～
-  ja_romaji: Rusetto do Supesharite ~ Shefu Jiman no Reshipu ~
+  ja_romaji: Rusetto Do Supesharite ~ Shefu Jiman no Reshipu ~
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    When a Spell/Trap Card, or monster effect, is activated and you control a "Nouvellez" Ritual Monster: Negate the activation, then, if you control a monster Special Summoned by a "Nouvellez" monster's effect, you can destroy that card. If you Special Summon "Hungry Burger": You can banish this card from your GY; Tribute all monsters your opponent controls. You can only use each effect of "Recette de Spécialité - Chef's Specialty Recipe" once per turn.
+    When a Spell/Trap Card, or monster effect, is activated while you control a "Nouvellez" Ritual Monster: Negate the activation, then, if you control a monster Special Summoned by a "Nouvellez" monster's effect, you can destroy that card. If you Special Summon "Hungry Burger": You can banish this card from your GY; Tribute as many monsters your opponent controls as possible. You can only use each effect of "Recette de Spécialité - Chef's Specialty Recipe" once per turn.
   de:
   es:
   fr:
