--- a/data/cards/yugipedia934974.yaml
+++ b/data/cards/yugipedia934974.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: コンフィラス・ド・ヌーベルズ
-  ja_romaji: Konfirasu do Nūberuzu
+  ja_romaji: Konfirasu Do Nūberuzu
   ko:
   ko_rr:
   zh-TW:
