--- a/data/cards/yugipedia934976.yaml
+++ b/data/cards/yugipedia934976.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: フォアグラシャ・ド・ヌーベルズ
-  ja_romaji: Foagurasha do Nūberuzu
+  ja_romaji: Foagurasha Do Nūberuzu
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Foie Glasya de Nouvellez" once per turn. If this card is Special Summoned: You can target up 3 cards in any GY(s); shuffle them into the Deck. When a card or effect is activated that targets a monster(s) on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute both 1 "Nouvellez" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 5 or 6 "Nouvellez" Ritual Monster from your hand or Deck.
+    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Foie Glasya de Nouvellez" once per turn. If this card is Special Summoned: You can target up to 3 cards in any GY(s); shuffle them into the Deck. When a card or effect is activated that targets a monster(s) on the field, or when a monster is targeted for an attack (Quick Effect): You can Tribute both 1 "Nouvellez" monster you control and 1 Attack Position monster on either field, and if you do, Special Summon 1 Level 5 or 6 "Nouvellez" Ritual Monster from your hand or Deck.
   de:
   es:
   fr:
