--- a/data/cards/yugipedia934978.yaml
+++ b/data/cards/yugipedia934978.yaml
@@ -8,14 +8,14 @@ name:
   it:
   pt:
   ja: バグリエル・ド・ヌーベルズ
-  ja_romaji: Bagurieru do Nūberuzu
+  ja_romaji: Bagurieru Do Nūberuzu
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Baegriller Nouvellez" once per turn. If this card is Special Summoned: You can negate the effects of as many face-up cards your opponent currently controls as possible (until the end of this turn), then, if it was Special Summoned by a "Nouvellez" monsters' effect, Tribute all monsters they control. (Quick Effect): You can target 1 opponent's Attack Position monster; Tribute it, and if you do, Special Summon 1 "Hungry Burger" from your hand or Deck.
+    You can Ritual Summon this card with any "Recipe" card. You can only use each of the following effects of "Baegriller Nouvellez" once per turn. If this card is Special Summoned: You can negate the effects of as many face-up cards your opponent currently controls as possible (until the end of this turn), then, if this card was Special Summoned by a "Nouvellez" monster's effect, Tribute as many monsters your opponent controls as possible. (Quick Effect): You can target 1 opponent's Attack Position monster; Tribute it, and if you do, Special Summon 1 "Hungry Burger" from your hand or Deck.
   de:
   es:
   fr:
@@ -42,6 +42,7 @@ sets:
     set_name: 'Deck Build Pack: Wild Survivors'
     rarities:
     - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
