--- a/data/cards/yugipedia934979.yaml
+++ b/data/cards/yugipedia934979.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    When this card is activated: You can add 1 "Recipe" card from your Deck or GY to your hand. Once per turn: You can place 1 Ritual Monster from your hand on the bottom of the Deck; draw 1 card. During your End Phase: You can target 2 cards in your GY, including at least 1 "Recipe" card; place them on the bottom of the Deck in any order, then draw 1 card. You can only activate 1 "Nouvellez Auberge "À Table"" per turn.
+    When this card is activated: You can add 1 "Recipe" card from your Deck or GY to your hand. Once per turn: You can place 1 Ritual Monster from your hand on the bottom of the Deck; draw 1 card. During your End Phase: You can target 2 cards in your GY, including a "Recipe" card; place them on the bottom of the Deck in any order, then draw 1 card. You can only activate 1 "Nouvellez Auberge "À Table"" per turn.
   de:
   es:
   fr:
