--- a/data/cards/yugipedia934980.yaml
+++ b/data/cards/yugipedia934980.yaml
@@ -8,14 +8,15 @@ name:
   it:
   pt:
   ja: <ruby>Ｒｅｃｅｔｔｅ ｄｅ Ｐｏｉｓｓｏｎ<rt>ルセット・ド・ポワソン</rt></ruby>～<ruby>魚<rt>さかな</rt></ruby><ruby>料<rt>りょう</rt></ruby><ruby>理<rt>り</rt></ruby>のレシプ～
-  ja_romaji: Rusetto do Powason ~ Sakana Ryōri no Reshipu ~
+  ja_romaji: Rusetto Do Powason ~ Sakanaryōri no Reshipu ~
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    This card can be used to Ritual Summon any "Nouvellez" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon, then, if you Ritual Summoned "Buerillabaisse de Nouvellez" with this effect, you can add 1 "Recipe" Ritual Spell from your Deck or GY to your hand, except "Recette de Poisson - Fish Recipe".
+    This card can be used to Ritual Summon any "Nouvellez" Ritual Monster. You must also Tribute monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. Then, if you Ritual Summoned "Buerillabaisse de Nouvellez" with this effect, you can apply the following effect.
+    ● Add 1 "Recipe" Ritual Spell from your Deck or GY to your hand, except "Recette de Poisson - Fish Recipe".
   de:
   es:
   fr:
