--- a/data/cards/09341993.yaml
+++ b/data/cards/09341993.yaml
@@ -32,7 +32,7 @@ text:
     ①: 자신 필드의 "아다마시아" 몬스터를 임의의 수만큼 릴리스하고, 그 수 ＋ 1장만큼 필드의 카드를 대상으로 하여 발동할 수 있다. 그 카드를 파괴한다.
   zh-TW:
   zh-CN: |-
-    ①：解放自己场上任意数量的“魔救”怪兽，可以该数量＋1张的场上的卡为对象发动。破坏该卡。
+    ①：解放自己场上任意数量的"魔救"怪兽，可以该数量＋1张的场上的卡为对象发动。破坏该卡。
 card_type: Trap
 property: Normal
 series:
