--- a/data/cards/32557233.yaml
+++ b/data/cards/32557233.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. 이 카드는 자신 필드의 식물족 몬스터 1장을 릴리스하고 발동할 수도 있다. ①: 자신 묘지에서 "육화" 몬스터 1장을 고르고 수비 표시로 특수 소환한다. 몬스터를 릴리스하고 이 카드를 발동했을 경우, 추가로 자신 묘지에서 식물족 몬스터 1장을 골라 수비 표시로 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。此卡也可以通过解放自己场上的1只植物族怪兽发动。①：从自己墓地挑选1只“六花”怪兽以守备表示形式进行特殊召唤。在通过解放怪兽发动此卡的情况下，进而从自己墓地挑选1只植物族怪兽以守备表示形式进行特殊召唤。
+    此卡名的卡1回合仅可发动1张。此卡也可以通过解放自己场上的1只植物族怪兽发动。①：从自己墓地挑选1只"六花"怪兽以守备表示形式进行特殊召唤。在通过解放怪兽发动此卡的情况下，进而从自己墓地挑选1只植物族怪兽以守备表示形式进行特殊召唤。
 card_type: Trap
 property: Normal
 series:
