--- a/data/cards/96162588.yaml
+++ b/data/cards/96162588.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 "육화" 몬스터가 릴리스되었을 경우에 발동할 수 있다. 상대는 자신 필드의 몬스터 1장을 릴리스해야 한다. ②: 상대 엔드 페이즈에, 식물족 몬스터 이외의 앞면 표시 몬스터가 자신 필드에 존재할 경우에 발동한다. 이 카드를 파괴한다.
   zh-TW:
   zh-CN: |-
-    此卡名的①效果1回合仅可使用1次。①：自己场上的“六花”怪兽被解放的情况下可以发动。对手必须解放自身场上的1只怪兽。②：对手结束阶段，植物族怪兽以外的表侧表示怪兽存在于自己场上的情况下会发动。破坏此卡。
+    此卡名的①效果1回合仅可使用1次。①：自己场上的"六花"怪兽被解放的情况下可以发动。对手必须解放自身场上的1只怪兽。②：对手结束阶段，植物族怪兽以外的表侧表示怪兽存在于自己场上的情况下会发动。破坏此卡。
 card_type: Spell
 property: Continuous
 series:
