--- a/data/cards/10286023.yaml
+++ b/data/cards/10286023.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 "아다마시아" 카드의 효과로 특수 소환에 성공했을 경우에 발동할 수 있다. 자신은 덱에서 1장 드로우한다. ②: 이 카드가 묘지에 존재할 경우, 자신의 필드 / 묘지의 물 속성 싱크로 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 엑스트라 덱으로 되돌리고, 이 카드를 덱 맨 위로 되돌린다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：此卡用“魔救”卡的效果特殊召唤成功的情况下可以发动。自己从牌组抽1张。②：此卡存在于墓地的情况下，可以自己场上・墓地的1只水属性同步怪兽为对象发动。该怪兽放回持有者的额外牌组，此卡放回牌组最上面。
+    此卡名的①②效果1回合仅可各使用1次。①：此卡用"魔救"卡的效果特殊召唤成功的情况下可以发动。自己从牌组抽1张。②：此卡存在于墓地的情况下，可以自己场上・墓地的1只水属性同步怪兽为对象发动。该怪兽放回持有者的额外牌组，此卡放回牌组最上面。
 card_type: Monster
 monster_type_line: Rock / Effect
 attribute: WATER
