--- a/data/cards/46552140.yaml
+++ b/data/cards/46552140.yaml
@@ -32,7 +32,7 @@ text:
     ①: 자신 필드의 암석족 몬스터의 공격력 / 수비력은 500 올린다. ②: 1턴에 1번, 자신 메인 페이즈에 발동할 수 있다. 덱에서 "아다마시아" 카드를 5장까지 고르고, 좋아하는 순서대로 덱 맨 위에 놓는다.
   zh-TW:
   zh-CN: |-
-    ①：自己场上的岩石族怪兽的攻击力·守备力上升500。②：1回合1次，自己的主要阶段可以发动。从牌组挑选最多5张“魔救”卡以喜欢的顺序放在牌组最上面。
+    ①：自己场上的岩石族怪兽的攻击力・守备力上升500。②：1回合1次，自己的主要阶段可以发动。从牌组挑选最多5张"魔救"卡以喜欢的顺序放在牌组最上面。
 card_type: Spell
 property: Field
 series:
