--- a/data/cards/60880471.yaml
+++ b/data/cards/60880471.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 "육화" 몬스터가 존재하고, 자신 필드의 몬스터를 대상으로 하는 몬스터의 효과를 상대가 발동했을 때, 패 / 필드의 이 카드를 릴리스하고 발동할 수 있다. 그 효과를 무효로 한다. ②: 이 카드가 묘지에 존재할 경우, 자신 필드의 식물족 몬스터 1장을 릴리스하고 발동할 수 있다. 이 카드를 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 이 카드는, 필드에서 벗어났을 경우에 제외된다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：自己场上存在“六花”怪兽，且对手发动以自己场上的怪兽为对象的怪兽效果时，解放手牌・场上的此卡后可以发动。将该效果无效。②：此卡存在于墓地的情况下，解放自己场上1只植物族怪兽后可以发动。以守备表示形式将此卡特殊召唤。用此效果特殊召唤的此卡从场上离开的情况下将被除外。
+    此卡名的①②效果1回合仅可各使用1次。①：自己场上存在"六花"怪兽，且对手发动以自己场上的怪兽为对象的怪兽效果时，解放手牌・场上的此卡后可以发动。将该效果无效。②：此卡存在于墓地的情况下，解放自己场上1只植物族怪兽后可以发动。以守备表示形式将此卡特殊召唤。用此效果特殊召唤的此卡从场上离开的情况下将被除外。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: WATER
