--- a/data/cards/67007102.yaml
+++ b/data/cards/67007102.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 이 카드는 발동 후, 일반 몬스터(언데드족 / 빛 / 레벨 8 / 공 800 / 수 2500)가 되고, 몬스터 존에 특수 소환한다. 이 카드는 함정 카드로도 취급한다. 자신 필드에 "황금경 엘드리치"가 존재할 경우, 추가로 필드의 앞면 표시 몬스터 1장을 고르고 공격력을 0 으로 할 수 있다. ②: 자신 / 상대의 엔드 페이즈에 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 "엘드릭시르" 마법 / 함정 카드 1장을 고르고 자신 필드에 세트한다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合1次，仅可使用其中1个。①：此卡发动后变为通常怪兽（不死族・光・等级8・攻800/守2500）特殊召唤至怪兽区域。此卡也视为陷阱卡。自己场上存在“黄金卿埃尔德里奇”的情况下，可以进而挑选场上的1只表侧表示怪兽将其攻击力改为0。②：在自己・对手的结束阶段将墓地的此卡除外后可以发动。从牌组挑选1张“埃尔德里希尔”魔法・陷阱卡放置在自己场上。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：此卡发动后变为通常怪兽（不死族・光・等级8・攻800／守2500），特殊召唤至怪兽区域。此卡也视为陷阱卡。自己场上存在"黄金卿埃尔德里奇"的情况下，可以进而挑选场上的1只表侧表示怪兽将其攻击力改为0。②：在自己・对手的结束阶段将墓地的此卡除外后可以发动。从牌组挑选1张"埃尔德里希尔"魔法・陷阱卡放置在自己场上。
 card_type: Trap
 property: Continuous
 series:
