--- a/data/cards/68829754.yaml
+++ b/data/cards/68829754.yaml
@@ -12,7 +12,7 @@ name:
   ko: 검은 각성의 엘드릭시르
   ko_rr: Jeom-eun Gakseong-ui Eldeuriksireu
   zh-TW:
-  zh-CN: 黑化觉醒的埃尔德里希尔
+  zh-CN: 黑色觉醒的埃尔德里希尔
 text:
   en: |-
     Special Summon 1 Zombie monster from your hand or Deck in Defense Position, but if you control no "Eldlich" monsters, you can only Special Summon "Eldlich" monsters with this effect. For the rest of this turn after this card resolves, you cannot Special Summon monsters, except Zombie monsters. You can banish this card from your GY; Set 1 "Golden Land" Spell/Trap directly from your Deck. You can only use 1 "Eldlixir of Black Awakening" effect per turn, and only once that turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 패 / 덱에서 언데드족 몬스터 1장을 수비 표시로 특수 소환한다. 자신 필드에 "엘드리치" 몬스터가 존재하지 않을 경우에는, 이 효과로 "엘드리치" 몬스터밖에 특수 소환할 수 없다. 이 카드의 발동 후, 턴 종료시까지 자신은 언데드족 몬스터밖에 특수 소환할 수 없다. ②: 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 "황금향" 마법 / 함정 카드 1장을 고르고 자신 필드에 세트한다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合1次，仅可使用其中1个。①：从手牌・牌组以守备表示形式将1只不死族怪兽特殊召唤。自己场上不存在“埃尔德里奇”怪兽的情况下，用此效果只可特殊召唤“埃尔德里奇”怪兽。此卡发动后，直到回合结束时为止自己只可特殊召唤不死族怪兽。②：将墓地的此卡除外后可以发动。从牌组挑选1张“黄金乡”魔法・陷阱卡放置在自己场上。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：从手牌・牌组以守备表示形式将1只不死族怪兽特殊召唤。自己场上不存在"埃尔德里奇"怪兽的情况下，用此效果只可特殊召唤"埃尔德里奇"怪兽。此卡发动后，直到回合结束时为止自己只可特殊召唤不死族怪兽。②：将墓地的此卡除外后可以发动。从牌组挑选1张"黄金乡"魔法・陷阱卡放置在自己场上。
 card_type: Spell
 property: Normal
 series:
