--- a/data/cards/71002019.yaml
+++ b/data/cards/71002019.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드의 식물족 몬스터 1장을 릴리스하고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 일반 소환 또는 식물족 몬스터의 효과로 특수 소환에 성공했을 경우에 발동할 수 있다. 덱에서 "육화" 마법 / 함정 카드 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合仅可各使用1次。①：解放自己场上的1只植物族怪兽后可以发动。从手牌将此卡特殊召唤。②：此卡召唤成功，或者用植物族怪兽的效果特殊召唤成功的情况下可以发动。从牌组将1张“六花”魔法·陷阱卡加入手牌。
+    此卡名的①②效果1回合仅可各使用1次。①：解放自己场上的1只植物族怪兽后可以发动。从手牌将此卡特殊召唤。②：此卡召唤成功，或者用植物族怪兽的效果特殊召唤成功的情况下可以发动。从牌组将1张"六花"魔法・陷阱卡加入手牌。
 card_type: Monster
 monster_type_line: Plant / Effect
 attribute: WATER
