--- a/data/cards/72957245.yaml
+++ b/data/cards/72957245.yaml
@@ -32,7 +32,7 @@ text:
     ①: 자신 묘지의 암석족 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 수비 표시로 특수 소환한다. 이 효과로 "아다마시아" 몬스터를 특수 소환했을 경우에는, 추가로 덱에서 레벨 4 이하의 암석족 몬스터 1장을 고르고 덱 맨 위에 놓을 수 있다.
   zh-TW:
   zh-CN: |-
-    ①：可以自己墓地的1只岩石族怪兽为对象发动。以守备表示形式将该怪兽特殊召唤。用此效果特殊召唤“魔救”怪兽的情况下，可以进而从牌组挑选1只等级4以下的岩石族怪兽放在牌组最上面。
+    ①：可以自己墓地的1只岩石族怪兽为对象发动。以守备表示形式将该怪兽特殊召唤。用此效果特殊召唤"魔救"怪兽的情况下，可以进而从牌组挑选1只等级4以下的岩石族怪兽放在牌组最上面。
 card_type: Spell
 property: Normal
 series:
