--- a/data/cards/94224458.yaml
+++ b/data/cards/94224458.yaml
@@ -12,7 +12,7 @@ name:
   ko: 하얀 숙명의 엘드릭시르
   ko_rr: Hayan Sokmyeong-ui Eldeuriksireu
   zh-TW:
-  zh-CN: 白化宿命的埃尔德里希尔
+  zh-CN: 白色宿命的埃尔德里希尔
 text:
   en: |-
     Special Summon 1 Zombie monster from your hand or GY, but if you control no "Eldlich" monsters, you can only Special Summon "Eldlich" monsters with this effect. For the rest of this turn after this card resolves, you cannot Special Summon monsters, except Zombie monsters. During your Main Phase: You can banish this card from your GY; Set 1 "Golden Land" Spell/Trap directly from your Deck. You can only use 1 "Eldlixir of White Destiny" effect per turn, and only once that turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ①②의 효과는 1턴에 1번, 어느 쪽이든 1개밖에 사용할 수 없다. ①: 자신의 패 / 묘지에서 언데드족 몬스터 1장을 고르고 특수 소환한다. 자신 필드에 "엘드리치" 몬스터가 존재하지 않을 경우에는, 이 효과로 "엘드리치" 몬스터밖에 특수 소환할 수 없다. 이 카드의 발동 후, 턴 종료시까지 자신은 언데드족 몬스터밖에 특수 소환할 수 없다. ②: 자신 메인 페이즈에 묘지의 이 카드를 제외하고 발동할 수 있다. 덱에서 "황금향" 마법 / 함정 카드 1장을 고르고 자신 필드에 세트한다.
   zh-TW:
   zh-CN: |-
-    此卡名的①②效果1回合1次，仅可使用其中1个。①：从自己的手牌・墓地挑选1只不死族怪兽进行特殊召唤。自己场上不存在“埃尔德里奇”怪兽的情况下，用此效果只可特殊召唤“埃尔德里奇”怪兽。此卡发动后，直到回合结束时为止自己只可特殊召唤不死族怪兽。②：在自己主要阶段将墓地的此卡除外后可以发动。从牌组挑选1张“黄金乡”魔法・陷阱卡放置在自己场上。
+    此卡名的①②效果1回合1次，仅可使用其中1个。①：从自己的手牌・墓地挑选1只不死族怪兽进行特殊召唤。自己场上不存在"埃尔德里奇"怪兽的情况下，用此效果只可特殊召唤"埃尔德里奇"怪兽。此卡发动后，直到回合结束时为止自己只可特殊召唤不死族怪兽。②：在自己主要阶段将墓地的此卡除外后可以发动。从牌组挑选1张"黄金乡"魔法・陷阱卡放置在自己场上。
 card_type: Spell
 property: Quick-Play
 series:
