--- a/data/cards/92379223.yaml
+++ b/data/cards/92379223.yaml
@@ -54,9 +54,9 @@ text:
     ●제외되어 있는 자신의 "황금향" 마법 / 함정 카드 3종류를 1장씩 골라 덱으로 되돌리고, 상대의 LP를 절반으로 한다. 그 후, 상대의 LP의 수치만큼만 자신의 LP를 회복한다.
   zh-TW:
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：自己场上存在“埃尔德里奇”怪兽的情况下，可以从以下效果选择1个发动。
-    ●挑选自己被除外的“埃尔德里希尔”魔法・陷阱卡3种各1张放回牌组，将场上的卡全部破坏。
-    ●挑选自己被除外的“黄金乡”魔法・陷阱卡3种各1张放回牌组，对手的LP改成一半。之后，自己的LP恢复对手的LP的数值。
+    此卡名的卡1回合仅可发动1张。①：自己场上存在"埃尔德里奇"怪兽的情况下，可以从以下效果选择1个发动。
+    ●挑选自己被除外的"埃尔德里希尔"魔法・陷阱卡3种各1张放回牌组，将场上的卡全部破坏。
+    ●挑选自己被除外的"黄金乡"魔法・陷阱卡3种各1张放回牌组，对手的LP改成一半。之后，自己的LP恢复对手的LP的数值。
 card_type: Trap
 property: Normal
 images:
