--- a/data/cards/11819616.yaml
+++ b/data/cards/11819616.yaml
@@ -12,7 +12,7 @@ name:
   ko: 춘희 티타니얼
   ko_rr: Chunhui Titanieol
   zh-TW:
-  zh-CN: 椿姬媞泰妮娅
+  zh-CN: 椿姬媞泰妮亚
 text:
   en: |-
     When a card or effect is activated that targets a card(s) on the field (Quick Effect): You can Tribute 1 face-up Plant monster; negate the activation, and if you do, destroy it.
