--- a/data/cards/30241314.yaml
+++ b/data/cards/30241314.yaml
@@ -182,6 +182,7 @@ sets:
     - Secret Rare
     - Collector's Rare
 limit_regulation:
-  tcg: Limited
+  tcg: Unlimited
   ocg: Unlimited
+  speed: Not yet released
 yugipedia_page_id: 505003
