--- a/data/cards/56984514.yaml
+++ b/data/cards/56984514.yaml
@@ -32,7 +32,7 @@ text:
     이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드에 "엘드리치" 몬스터가 존재하고, 몬스터의 효과 / 마법 / 함정 카드가 발동했을 때, 자신 필드의 언데드족 몬스터 1장을 릴리스하여 발동할 수 있다. 그 발동을 무효로 하고 파괴한다.
   zh-TW:
   zh-CN: |-
-    此卡名的卡1回合仅可发动1张。①：自己场上存在“埃尔德里奇”怪兽，且怪兽的效果・魔法・陷阱卡发动时，将自己场上的1只不死族怪兽解放后可以发动。将该发动无效并破坏。
+    此卡名的卡1回合仅可发动1张。①：自己场上存在"埃尔德里奇"怪兽，且怪兽的效果・魔法・陷阱卡发动时，将自己场上的1只不死族怪兽解放后可以发动。将该发动无效并破坏。
 card_type: Trap
 property: Counter
 series:
