--- a/data/cards/03103067.yaml
+++ b/data/cards/03103067.yaml
@@ -15,9 +15,9 @@ name:
   zh-CN: 攻击诱导装甲
 text:
   en: |-
-    When a monster declares an attack: Activate 1 of these effects.
+    When a monster declares an attack: Activate 1 of these effects;
     ● Destroy the attacking monster.
-    ● Target 1 monster on the field, except the attacking monster; change the attack target to it and perform damage calculation.
+    ● Target 1 monster on either field, except the attacking monster; change the attack target to it and perform damage calculation.
     You can only activate 1 "Attack Guidance Armor" per turn.
   de:
   es:
