--- a/data/cards/15464375.yaml
+++ b/data/cards/15464375.yaml
@@ -1,7 +1,7 @@
 konami_id: 17915
 password: 15464375
 name:
-  en: Adularia of the Moonlit Water
+  en: Adularia of the June Moon
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN: 水月之冰长石巫
 text:
   en: |-
-    If a face-up card is in your Spell & Trap Zone, you can Special Summon this card (from your hand). You can only Special Summon "Adularia of the Moonlit Water" once per turn this way. Gains 600 ATK/DEF for each face-up Spell/Trap on the field. You can send 2 face-up cards from your Spell & Trap Zone to the GY; send 1 Level 4 or lower monster from your Deck to the GY. You can only use this effect of "Adularia of the Moonlit Water" once per turn.
+    If you control a face-up card in your Spell & Trap Zone, you can Special Summon this card (from your hand). You can only Special Summon "Adularia of the June Moon" once per turn this way. Gains 600 ATK/DEF for each face-up Spell/Trap on the field. You can send 2 face-up cards from your Spell & Trap Zone to the GY; send 1 Level 4 or lower monster from your Deck to the GY. You can only use this effect of "Adularia of the June Moon" once per turn.
   de:
   es:
   fr:
@@ -38,7 +38,7 @@ atk: 1000
 def: 1000
 images:
 - index: 1
-  image: AdulariaoftheMoonlitWater-VJMP-JP-UR.png
+  image: AdulariaoftheJuneMoon-VJMP-JP-UR.png
 sets:
   ja:
   - set_number: VJMP-JP219
