--- a/data/cards/38105306.yaml
+++ b/data/cards/38105306.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 逐渐削减的生命
 text:
   en: |-
-    You can only control 1 "Life Shaver". Once per turn, during your opponent's End Phase: Place 1 counter on this card. During the Main or Battle Phase, if this card has a counter: You can send this card to the GY, then your opponent discards as many cards as possible from their hand, up to the number of counters that were on this card.
+    You can only control 1 "Life Shaver". Once per turn, during your opponent's End Phase: Place 1 counter on this card. During the Main or Battle Phase, if this card has a counter(s) on it: You can send this card to the GY, then make your opponent discard as many cards as possible, up to the number of counters that were on this card.
   de:
   es:
   fr:
