--- a/data/cards/85758066.yaml
+++ b/data/cards/85758066.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 机械装置的魔法镜
 text:
   en: |-
-    When an opponent's monster declares an attack: Target 1 Spell in your opponent's GY; Set it to your field. You can banish this card from your GY and send 1 "Monster Reborn" from your hand or Set on your field to the GY; Special Summon 1 "Obelisk the Tormentor" from your GY in Defense Position, and if you activated this effect during your opponent's turn, for the rest of this turn while you control the Special Summoned monster, all monsters your opponent controls must attack that monster, if able.
+    When an opponent's monster declares an attack: Target 1 Spell in your opponent's GY; Set it to your field. You can banish this card from your GY and send 1 "Monster Reborn" from your hand or face-down field to the GY; Special Summon 1 "Obelisk the Tormentor" from your GY in Defense Position, and if you activated this effect during your opponent's turn, all monsters your opponent controls that can attack must attack that face-up monster, this turn, while you control it.
   de:
   es:
   fr:
