--- a/data/cards/01683982.yaml
+++ b/data/cards/01683982.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 毒蛇的怨念
 text:
   en: |-
-    Your non-Reptile monsters cannot attack, also players cannot activate their effects. You can only use each of the following effects of "Viper's Grudge" once per turn. If a face-up Reptile monster(s) you control is destroyed by battle or sent to the GY: You can Special Summon 1 Level 4 or lower Reptile monster from your Deck. If this card in the Spell & Trap Zone is destroyed: You can return all your banished Reptile monsters to the GY.
+    Non-Reptile monsters you control cannot attack, also you cannot activate their effects. You can only use each of the following effects of "Viper's Grudge" once per turn. If a face-up Reptile monster(s) you control is destroyed by battle or sent to the GY: You can Special Summon 1 Level 4 or lower Reptile monster from your Deck. If this card is destroyed in the Spell & Trap Zone: You can return all your banished Reptile monsters to your GY.
   de:
   es:
   fr:
