--- a/data/cards/05916510.yaml
+++ b/data/cards/05916510.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 4 monsters
-    You can detach 1 material from this card; Special Summon 1 LIGHT monster from your hand. If this card is in your GY, except the turn it was sent there: You can target 1 Level 4 LIGHT Fairy monster you control; Special Summon this card, and if you do, attach the targeted monster to this card as material. You can only use each effect of "Starring Knight" once per turn.
+    You can detach 1 material from this card; Special Summon 1 LIGHT monster from your hand. If this card is in your GY, except the turn it was sent there: You can target 1 Level 4 LIGHT Fairy monster you control; Special Summon this card, and if you do, attach that monster to this card as material. You can only use each effect of "Starring Knight" once per turn.
   de:
   es:
   fr:
