--- a/data/cards/19272658.yaml
+++ b/data/cards/19272658.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 超量便当
 text:
   en: |-
-    If a monster(s) your opponent controls is destroyed by battle or sent to the GY: Target 1 Xyz Monster you control; attach 1 monster from your opponent's GY to it as material. You can banish this card from your GY, then target 1 monster on the field that was Special Summoned from the Extra Deck; change its battle position.
+    If a monster(s) your opponent controls is destroyed by battle or sent to the GY: You can target 1 Xyz Monster you control; attach 1 monster from your opponent's GY to that monster as material. You can banish this card from your GY, then target 1 monster on the field Special Summoned from the Extra Deck; change its battle position.
   de:
   es:
   fr:
