--- a/data/cards/26988374.yaml
+++ b/data/cards/26988374.yaml
@@ -1,7 +1,7 @@
 konami_id: 17268
 password: 26988374
 name:
-  en: Magikey Avatar - Astartu
+  en: Magikey Deity - Ashtartu
   de:
   es:
   fr:
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 8 monsters
-    Once per turn, when your Normal Monster or "Magikey" monster destroys an opponent's monster by battle: You can detach 1 material from this card; inflict damage to your opponent equal to the destroyed monster's original ATK. Once per turn, during your opponent's Main Phase (Quick Effect): You can target 1 monster your opponent controls with the same Attribute as a Normal Monster or "Magikey" monster you control or in your GY; detach 1 material from this card, and if you do, banish the targeted monster.
+    Once per turn, when your Normal Monster or "Magikey" monster destroys an opponent's monster by battle: You can detach 1 material from this card; inflict damage to your opponent equal to the destroyed monster's original ATK. Once per turn, during your opponent's Main Phase (Quick Effect): You can target 1 monster your opponent controls with the same Attribute as a Normal Monster or "Magikey" monster you control or is in your GY; detach 1 material from this card, and if you do, banish that monster.
   de:
   es:
   fr:
@@ -41,7 +41,7 @@ series:
 - Magikey
 images:
 - index: 1
-  image: MagikeyAvatarAstartu-YO05-JP-UR.png
+  image: MagikeyDeityAshtartu-YO05-JP-UR.png
 sets:
   ja:
   - set_number: YO05-JP001
