--- a/data/cards/42228966.yaml
+++ b/data/cards/42228966.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 战场的惨剧
 text:
   en: |-
-    During your Main Phase 2, if no monster battled another monster this turn: You can discard 1 card; Set 1 "Battlefield Tragedy" directly from your Deck to your Spell & Trap Zone. You can only use this effect of "Battlefield Tragedy" once per turn. Once per turn, during the End Phase, if a monster battled another monster this turn: The turn player sends the top 5 cards of their Deck to the GY.
+    During your Main Phase 2, if no monsters battled each other this turn: You can discard 1 card; Set 1 "Battlefield Tragedy" directly from your Deck to your Spell & Trap Zone. You can only use this effect of "Battlefield Tragedy" once per turn. Once per turn, during the End Phase, if any monsters battled each other this turn: The turn player sends 5 cards from the top of their Deck to the GY.
   de:
   es:
   fr:
