--- a/data/cards/48626373.yaml
+++ b/data/cards/48626373.yaml
@@ -115,6 +115,6 @@ sets:
     - Ultra Rare
     - Prismatic Secret Rare
 limit_regulation:
-  tcg: Not yet released
+  tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 900023
