--- a/data/cards/77590412.yaml
+++ b/data/cards/77590412.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 人偶城堡
 text:
   en: |-
-    When this card is Normal Summoned: You can change this card to Defense Position, and if you do, send 1 EARTH Warrior monster from your Deck to the GY. Your opponent's monsters must attack this card, if able. Once per turn, when this card is targeted for an attack: You can target 1 Level 6 or higher EARTH Warrior monster in your GY; send this card from the field to the GY, and if you do, Special Summon the targeted monster, then change the attack target to it.
+    When this card is Normal Summoned: You can change this card to Defense Position, and if you do, send 1 EARTH Warrior monster from your Deck to your GY. Monsters your opponent controls that can attack must attack this card. Once per turn, when this card is targeted for an attack: You can target 1 Level 6 or higher EARTH Warrior monster in your GY; send this card from the field to the GY, and if you do, Special Summon that monster, then change the attack target to it.
   de:
   es:
   fr:
