--- a/data/cards/88617904.yaml
+++ b/data/cards/88617904.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 升变
 text:
   en: |-
-    Target 1 Level 3 or lower EARTH Warrior monster you control; send it to the GY, and if you do, Special Summon 1 Level 4 or higher EARTH Warrior monster from your Deck, then, if you control a "Puppet" monster whose original Attribute/Type are EARTH/Warrior, that Special Summoned monster gains 100 ATK/DEF for each card in your opponent's GY. You can only activate 1 "Promotion" per turn.
+    Target 1 Level 3 or lower EARTH Warrior monster you control; send it to the GY, and if you do, Special Summon 1 Level 4 or higher EARTH Warrior monster from your Deck, then, if you control a "Puppet" monster that was originally an EARTH Warrior, that Special Summoned monster gains ATK/DEF equal to the number of cards currently in your opponent's GY x 100. You can only activate 1 "Promotion" per turn.
   de:
   es:
   fr:
