--- a/data/cards/59242457.yaml
+++ b/data/cards/59242457.yaml
@@ -57,6 +57,7 @@ images:
   illustration: ExosistersMagnifica-OW.png
 - index: '1.1'
   image: ExosistersMagnifica-DIFO-EN-UR-1E.png
+  illustration: ExosistersMagnifica-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: DIFO-EN046
