--- a/data/series/list.yaml
+++ b/data/series/list.yaml
@@ -4870,6 +4870,18 @@
   ko_rr: Jeal
   zh-TW:
   zh-CN:
+- en: Recipe
+  de: Rezept
+  es: Receta
+  fr: Recette
+  it: Ricetta
+  pt: Receita
+  ja: レシピ
+  ja_romaji: Reshipi
+  ko: 요리법
+  ko_rr: Yoribeop
+  zh-TW:
+  zh-CN:
 - en: Sky Striker Ace
   de: Himmelsjäger-Ass
   es: Caza del Cielo As
