--- a/data/series/map.yaml
+++ b/data/series/map.yaml
@@ -4858,6 +4858,18 @@ Zexal:
   ko_rr: Jeal
   zh-TW:
   zh-CN:
+Recipe:
+  de: Rezept
+  es: Receta
+  fr: Recette
+  it: Ricetta
+  pt: Receita
+  ja: レシピ
+  ja_romaji: Reshipi
+  ko: 요리법
+  ko_rr: Yoribeop
+  zh-TW:
+  zh-CN:
 Sky Striker Ace:
   de: Himmelsjäger-Ass
   es: Caza del Cielo As
